commit translated contents

--- a/docs/docs-ref-autogen/excel/excel/excel.shapecollection.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.shapecollection.yml
@@ -4,7 +4,7 @@ items:
     summary: |-
       代表工作表中所有形状的集合。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ShapeCollection
     fullName: Excel.ShapeCollection
     langs:
@@ -35,7 +35,7 @@ items:
     summary: |-
       将几何形状添加到工作表。 返回一个 Shape 对象，该对象代表新图形。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: addGeometricShape(geometricShapeType)
     fullName: addGeometricShape(geometricShapeType)
     langs:
@@ -71,7 +71,7 @@ items:
     summary: |-
       将几何形状添加到工作表。 返回一个 Shape 对象，该对象代表新图形。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: addGeometricShape(geometricShapeTypeString)
     fullName: addGeometricShape(geometricShapeTypeString)
     langs:
@@ -92,7 +92,7 @@ items:
     summary: |-
       在此集合的工作表中对形状的子集进行分组。 返回表示新形状组的 Shape 对象。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: addGroup(values)
     fullName: addGroup(values)
     langs:
@@ -131,7 +131,7 @@ items:
     summary: |-
       从 base64 编码的字符串创建图像并将其添加到工作表。 返回表示新图片的 Shape 对象。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: addImage(base64ImageString)
     fullName: addImage(base64ImageString)
     langs:
@@ -153,8 +153,8 @@ items:
 
           reader.onload = (event) => {
               Excel.run((context) => {
-                  const startIndex = (<string>(<FileReader>event.target).result).indexOf("base64,");
-                  const mybase64 = (<string>(<FileReader>event.target).result).substr(startIndex + 7);
+                  const startIndex = reader.result.toString().indexOf("base64,");
+                  const mybase64 = reader.result.toString().substr(startIndex + 7);
                   const sheet = context.workbook.worksheets.getItem("Shapes");
                   const image = sheet.shapes.addImage(mybase64);
                   image.name = "Image";
@@ -174,7 +174,7 @@ items:
     summary: |-
       将线条添加到工作表。 返回表示新线条的 Shape 对象。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: 'addLine(startLeft, startTop, endLeft, endTop, connectorType)'
     fullName: 'addLine(startLeft, startTop, endLeft, endTop, connectorType)'
     langs:
@@ -200,30 +200,30 @@ items:
           ```
       parameters:
         - id: startLeft
-          description: 从行的起点到工作表的左侧之间的距离 (以磅为单位)。
+          description: 从行的起点到工作表的左侧之间的距离（以磅为单位）。
           type:
             - number
         - id: startTop
-          description: 从行的起始位置到工作表的顶端之间的距离 (以磅为单位)。
+          description: 从行的起始位置到工作表的顶端之间的距离（以磅为单位）。
           type:
             - number
         - id: endLeft
-          description: 从工作表左侧线的末尾到的距离 (以磅为单位)。
+          description: 从工作表左侧线的末尾到的距离（以磅为单位）。
           type:
             - number
         - id: endTop
-          description: 从行的末尾到工作表的顶端的距离 (以磅为单位)。
+          description: 从行的末尾到工作表的顶端的距离（以磅为单位）。
           type:
             - number
         - id: connectorType
-          description: '代表连接器类型。 有关详细信息, 请参阅 ConnectorType。'
+          description: 代表连接器类型。 有关详细信息，请参阅 ConnectorType。
           type:
             - excel.Excel.ConnectorType
   - uid: excel.Excel.ShapeCollection.addLine_1
     summary: |-
       将线条添加到工作表。 返回表示新线条的 Shape 对象。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: 'addLine(startLeft, startTop, endLeft, endTop, connectorTypeString)'
     fullName: 'addLine(startLeft, startTop, endLeft, endTop, connectorTypeString)'
     langs:
@@ -237,30 +237,30 @@ items:
         description: ''
       parameters:
         - id: startLeft
-          description: 从行的起点到工作表的左侧之间的距离 (以磅为单位)。
+          description: 从行的起点到工作表的左侧之间的距离（以磅为单位）。
           type:
             - number
         - id: startTop
-          description: 从行的起始位置到工作表的顶端之间的距离 (以磅为单位)。
+          description: 从行的起始位置到工作表的顶端之间的距离（以磅为单位）。
           type:
             - number
         - id: endLeft
-          description: 从工作表左侧线的末尾到的距离 (以磅为单位)。
+          description: 从工作表左侧线的末尾到的距离（以磅为单位）。
           type:
             - number
         - id: endTop
-          description: 从行的末尾到工作表的顶端的距离 (以磅为单位)。
+          description: 从行的末尾到工作表的顶端的距离（以磅为单位）。
           type:
             - number
         - id: connectorTypeString
-          description: '代表连接器类型。 有关详细信息, 请参阅 ConnectorType。'
+          description: 代表连接器类型。 有关详细信息，请参阅 ConnectorType。
           type:
             - '"Straight" | "Elbow" | "Curve"'
   - uid: excel.Excel.ShapeCollection.addSvg
     summary: |-
       从 XML 字符串创建可缩放的矢量图形 (SVG) 并将其添加到工作表。 返回表示新图片的 Shape 对象。
 
-      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: addSvg(xml)
     fullName: addSvg(xml)
@@ -282,7 +282,7 @@ items:
     summary: |-
       使用提供的文本作为内容，将文本框添加到工作表。 返回表示新文本框的 Shape 对象。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: addTextBox(text)
     fullName: addTextBox(text)
     langs:
@@ -331,7 +331,7 @@ items:
     summary: |-
       返回工作表中的形状数。 只读。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getCount()
     fullName: getCount()
     langs:
@@ -347,7 +347,7 @@ items:
     summary: |-
       按名称或 ID 获取形状。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getItem(key)
     fullName: getItem(key)
     langs:
@@ -368,7 +368,7 @@ items:
     summary: |-
       使用其在集合中的位置获取形状。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getItemAt(index)
     fullName: getItemAt(index)
     langs:
@@ -400,13 +400,13 @@ items:
   - uid: excel.Excel.ShapeCollection.load
     summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
     remarks: |-
-      除了此签名之外, 此方法还具有以下签名:
+      除了此签名之外，此方法还具有以下签名：
 
-      `load(option?: string | string[]): Excel.ShapeCollection`-Where 选项是一个逗号分隔的字符串或一个字符串数组, 用于指定要加载的属性。
+      `load(option?: string | string[]): Excel.ShapeCollection`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
 
-      `load(option?: { select?: string; expand?: string; }): Excel.ShapeCollection`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。
+      `load(option?: { select?: string; expand?: string; }): Excel.ShapeCollection`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
 
-      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.ShapeCollection`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.ShapeCollection`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
     name: load(option)
     fullName: load(option)
     langs:
@@ -424,7 +424,7 @@ items:
           type:
             - Excel.Interfaces.ShapeCollectionLoadOptions & Excel.Interfaces.CollectionLoadOptions
   - uid: excel.Excel.ShapeCollection.load_1
-    summary: '将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。'
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -438,7 +438,7 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: '一个以逗号分隔的字符串或字符串数组, 用于指定要加载的属性。'
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: excel.Excel.ShapeCollection.load_2
@@ -459,7 +459,7 @@ items:
           type:
             - OfficeExtension.LoadOption
   - uid: excel.Excel.ShapeCollection.toJSON
-    summary: '重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.ShapeCollection`对象是 API 对象, 但`toJSON`方法返回一个无格式的 JavaScript 对象 (类型为`Excel.Interfaces.ShapeCollectionData`<!-- -->), 其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.ShapeCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ShapeCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
     name: toJSON()
     fullName: toJSON()
     langs:
