commit translated contents

--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.pivottablecollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.pivottablecollectionupdatedata.yml
@@ -1,16 +1,16 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.PivotTableCollectionUpdateData
-    summary: '一个用于更新 PivotTableCollection 对象上的数据的接口, 可用于 "pivotTableCollection (<!-- -->{ ... }<!-- -->)".'
+  - uid: 'excel!Excel.Interfaces.PivotTableCollectionUpdateData:interface'
+    summary: '一个用于更新 PivotTableCollection 对象上的数据的接口，可用于 "pivotTableCollection （<!-- -->{ ... }<!-- -->)".'
     name: Excel.Interfaces.PivotTableCollectionUpdateData
     fullName: Excel.Interfaces.PivotTableCollectionUpdateData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.PivotTableCollectionUpdateData.items
-  - uid: excel.Excel.Interfaces.PivotTableCollectionUpdateData.items
+      - 'excel!Excel.Interfaces.PivotTableCollectionUpdateData#items:member'
+  - uid: 'excel!Excel.Interfaces.PivotTableCollectionUpdateData#items:member'
     name: items
     fullName: items
     langs:
@@ -20,4 +20,14 @@ items:
       content: 'items?: Excel.Interfaces.PivotTableData[];'
       return:
         type:
-          - 'Excel.Interfaces.PivotTableData[]'
+          - 'excel!Excel.Interfaces.PivotTableCollectionUpdateData#items~0:complex'
+references:
+  - uid: 'excel!Excel.Interfaces.PivotTableCollectionUpdateData#items~0:complex'
+    name: 'Excel.Interfaces.PivotTableData[]'
+    fullName: 'Excel.Interfaces.PivotTableData[]'
+    spec.typeScript:
+      - uid: 'excel!Excel.Interfaces.PivotTableData:interface'
+        name: Excel.Interfaces.PivotTableData
+        fullName: Excel.Interfaces.PivotTableData
+      - name: '[]'
+        fullName: '[]'
