--- a/docs/docs-ref-autogen/outlook/outlook/office.seriestime.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.seriestime.yml
@@ -1,42 +1,42 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: outlook.Office.SeriesTime
+  - uid: 'outlook!Office.SeriesTime:interface'
     summary: |-
-      SeriesTime 对象提供用于获取和设置定期系列中的约会的日期和时间, 以及在定期系列中获取会议请求的日期和时间的方法。
+      SeriesTime 对象提供用于获取和设置定期系列中的约会的日期和时间，以及在定期系列中获取会议请求的日期和时间的方法。
 
-      \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+      \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem
+      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**： ReadItem
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读
+      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**：撰写或阅读
     name: Office.SeriesTime
     fullName: Office.SeriesTime
     langs:
       - typeScript
     type: interface
-    package: outlook
+    package: outlook!
     children:
-      - outlook.Office.SeriesTime.getDuration
-      - outlook.Office.SeriesTime.getEndDate
-      - outlook.Office.SeriesTime.getEndTime
-      - outlook.Office.SeriesTime.getStartDate
-      - outlook.Office.SeriesTime.getStartTime
-      - outlook.Office.SeriesTime.setDuration
-      - outlook.Office.SeriesTime.setEndDate
-      - outlook.Office.SeriesTime.setEndDate_1
-      - outlook.Office.SeriesTime.setStartDate
-      - outlook.Office.SeriesTime.setStartDate_1
-      - outlook.Office.SeriesTime.setStartTime
-      - outlook.Office.SeriesTime.setStartTime_1
-  - uid: outlook.Office.SeriesTime.getDuration
+      - 'outlook!Office.SeriesTime#getDuration:member(1)'
+      - 'outlook!Office.SeriesTime#getEndDate:member(1)'
+      - 'outlook!Office.SeriesTime#getEndTime:member(1)'
+      - 'outlook!Office.SeriesTime#getStartDate:member(1)'
+      - 'outlook!Office.SeriesTime#getStartTime:member(1)'
+      - 'outlook!Office.SeriesTime#setDuration:member(1)'
+      - 'outlook!Office.SeriesTime#setEndDate:member(1)'
+      - 'outlook!Office.SeriesTime#setEndDate:member(2)'
+      - 'outlook!Office.SeriesTime#setStartDate:member(1)'
+      - 'outlook!Office.SeriesTime#setStartDate:member(2)'
+      - 'outlook!Office.SeriesTime#setStartTime:member(1)'
+      - 'outlook!Office.SeriesTime#setStartTime:member(2)'
+  - uid: 'outlook!Office.SeriesTime#getDuration:member(1)'
     summary: |-
-      以分钟为单位获取定期约会系列中的常规实例的持续时间 (以分钟为单位)。
+      以分钟为单位获取定期约会系列中的常规实例的持续时间（以分钟为单位）。
 
-      \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+      \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem
+      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**： ReadItem
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读
+      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**：撰写或阅读
 
       #### <a name="examples"></a>示例
 
@@ -61,15 +61,15 @@ items:
         type:
           - number
         description: ''
-  - uid: outlook.Office.SeriesTime.getEndDate
+  - uid: 'outlook!Office.SeriesTime#getEndDate:member(1)'
     summary: |-
-      获取采用以下[ISO 8601](https://www.iso.org/iso-8601-date-and-time-format.html)日期格式的定期模式的结束日期: "YYYY MM-DD"
+      获取采用以下[ISO 8601](https://www.iso.org/iso-8601-date-and-time-format.html)日期格式的定期模式的结束日期： "YYYY MM-DD"
 
-      \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+      \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem
+      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**： ReadItem
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读
+      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**：撰写或阅读
 
       #### <a name="examples"></a>示例
 
@@ -94,15 +94,15 @@ items:
         type:
           - string
         description: ''
-  - uid: outlook.Office.SeriesTime.getEndTime
+  - uid: 'outlook!Office.SeriesTime#getEndTime:member(1)'
     summary: |-
-      获取定期模式的常规约会或会议请求实例的结束时间 (用户或外接程序使用以下[ISO 8601](https://www.iso.org/iso-8601-date-and-time-format.html)格式设置定期模式的任意时区): "THH: mm: ss: mmm"
+      获取定期模式的常规约会或会议请求实例的结束时间（用户或外接程序使用以下[ISO 8601](https://www.iso.org/iso-8601-date-and-time-format.html)格式设置定期模式的任意时区）： "THH： mm： ss： mmm"
 
-      \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+      \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem
+      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**： ReadItem
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读
+      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**：撰写或阅读
 
       #### <a name="examples"></a>示例
 
@@ -127,15 +127,15 @@ items:
         type:
           - string
         description: ''
-  - uid: outlook.Office.SeriesTime.getStartDate
+  - uid: 'outlook!Office.SeriesTime#getStartDate:member(1)'
     summary: |-
-      获取以以下[ISO 8601](https://www.iso.org/iso-8601-date-and-time-format.html)日期格式表示的定期模式的开始日期: "YYYY MM-DD"
+      获取以以下[ISO 8601](https://www.iso.org/iso-8601-date-and-time-format.html)日期格式表示的定期模式的开始日期： "YYYY MM-DD"
 
-      \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+      \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem
+      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**： ReadItem
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读
+      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**：撰写或阅读
 
       #### <a name="examples"></a>示例
 
@@ -160,15 +160,15 @@ items:
         type:
           - string
         description: ''
-  - uid: outlook.Office.SeriesTime.getStartTime
+  - uid: 'outlook!Office.SeriesTime#getStartTime:member(1)'
     summary: |-
-      获取定期模式的定期约会实例的开始时间 (以用户/外接程序使用以下[ISO 8601](https://www.iso.org/iso-8601-date-and-time-format.html)格式设置定期模式的任意时区): "THH: mm: ss: mmm"
+      获取定期模式的定期约会实例的开始时间（以用户/外接程序使用以下[ISO 8601](https://www.iso.org/iso-8601-date-and-time-format.html)格式设置定期模式的任意时区）： "THH： mm： ss： mmm"
 
-      \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+      \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem
+      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**： ReadItem
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读
+      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**：撰写或阅读
 
       #### <a name="examples"></a>示例
 
@@ -189,15 +189,15 @@ items:
         type:
           - string
         description: ''
-  - uid: outlook.Office.SeriesTime.setDuration
+  - uid: 'outlook!Office.SeriesTime#setDuration:member(1)'
     summary: |-
       设置定期模式中所有约会的持续时间。 这也会更改定期模式的结束时间。
 
-      \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+      \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadWriteItem
+      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**： ReadWriteItem
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写
+      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**：撰写
 
       #### <a name="examples"></a>示例
 
@@ -225,18 +225,18 @@ items:
         description: ''
       parameters:
         - id: minutes
-          description: 约会的长度 (以分钟为单位)。
+          description: 约会的长度（以分钟为单位）。
           type:
             - number
-  - uid: outlook.Office.SeriesTime.setEndDate
+  - uid: 'outlook!Office.SeriesTime#setEndDate:member(1)'
     summary: |-
       设置定期约会系列的结束日期。
 
-      \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+      \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadWriteItem
+      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**： ReadWriteItem
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写
+      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**：撰写
 
       #### <a name="examples"></a>示例
 
@@ -263,22 +263,22 @@ items:
           type:
             - number
         - id: month
-          description: '结束日期的月值。 有效范围为 0-11, 其中0表示第一个月, 11 表示第十二个月。'
+          description: 结束日期的月值。 有效范围为0-11，其中0表示第一个月，11表示第十二个月。
           type:
             - number
         - id: day
           description: 结束日期的天值。
           type:
             - number
-  - uid: outlook.Office.SeriesTime.setEndDate_1
+  - uid: 'outlook!Office.SeriesTime#setEndDate:member(2)'
     summary: |-
       设置定期约会系列的结束日期。
 
-      \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+      \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadWriteItem
+      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**： ReadWriteItem
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写
+      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**：撰写
 
       #### <a name="examples"></a>示例
 
@@ -302,18 +302,18 @@ items:
         description: ''
       parameters:
         - id: date
-          description: '以[ISO 8601](https://www.iso.org/iso-8601-date-and-time-format.html)日期格式表示的定期约会系列的结束日期: "YYYY MM-DD"。'
+          description: '以[ISO 8601](https://www.iso.org/iso-8601-date-and-time-format.html)日期格式表示的定期约会系列的结束日期： "YYYY MM-DD"。'
           type:
             - string
-  - uid: outlook.Office.SeriesTime.setStartDate
+  - uid: 'outlook!Office.SeriesTime#setStartDate:member(1)'
     summary: |-
       设置定期约会系列的开始日期。
 
-      \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+      \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadWriteItem
+      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**： ReadWriteItem
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写
+      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**：撰写
 
       #### <a name="examples"></a>示例
 
@@ -340,22 +340,22 @@ items:
           type:
             - number
         - id: month
-          description: '开始日期的月值。 有效范围为 0-11, 其中0表示第一个月, 11 表示第十二个月。'
+          description: 开始日期的月值。 有效范围为0-11，其中0表示第一个月，11表示第十二个月。
           type:
             - number
         - id: day
           description: 开始日期的日值。
           type:
             - number
-  - uid: outlook.Office.SeriesTime.setStartDate_1
+  - uid: 'outlook!Office.SeriesTime#setStartDate:member(2)'
     summary: |-
       设置定期约会系列的开始日期。
 
-      \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+      \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadWriteItem
+      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**： ReadWriteItem
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写
+      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**：撰写
 
       #### <a name="examples"></a>示例
 
@@ -379,18 +379,18 @@ items:
         description: ''
       parameters:
         - id: date
-          description: '以[ISO 8601](https://www.iso.org/iso-8601-date-and-time-format.html)日期格式表示的定期约会系列的开始日期: "YYYY-MM"。'
+          description: '以[ISO 8601](https://www.iso.org/iso-8601-date-and-time-format.html)日期格式表示的定期约会系列的开始日期： "YYYY-MM"。'
           type:
             - string
-  - uid: outlook.Office.SeriesTime.setStartTime
+  - uid: 'outlook!Office.SeriesTime#setStartTime:member(1)'
     summary: |-
-      设置定期模式设置的任何时区的定期约会系列的开始时间 (默认情况下使用项目的时区)。
+      设置定期模式设置的任何时区的定期约会系列的开始时间（默认情况下使用项目的时区）。
 
-      \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+      \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadWriteItem
+      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**： ReadWriteItem
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写
+      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**：撰写
 
       #### <a name="examples"></a>示例
 
@@ -417,22 +417,22 @@ items:
         description: ''
       parameters:
         - id: hours
-          description: '开始时间的小时值。 有效范围: 0-24。'
+          description: 开始时间的小时值。 有效范围：0-24。
           type:
             - number
         - id: minutes
-          description: '开始时间的分钟值。 有效范围: 0-59。'
+          description: 开始时间的分钟值。 有效范围：0-59。
           type:
             - number
-  - uid: outlook.Office.SeriesTime.setStartTime_1
+  - uid: 'outlook!Office.SeriesTime#setStartTime:member(2)'
     summary: |-
-      设置定期模式设置的任何时区的定期约会系列的开始时间 (默认情况下使用项目的时区)。
+      设置定期模式设置的任何时区的定期约会系列的开始时间（默认情况下使用项目的时区）。
 
-      \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+      \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadWriteItem
+      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**： ReadWriteItem
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写
+      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**：撰写
 
       #### <a name="examples"></a>示例
 
@@ -455,6 +455,6 @@ items:
         description: ''
       parameters:
         - id: time
-          description: '以标准 datetime 字符串格式表示的所有实例的开始时间: "THH: mm: ss: mmm"。'
+          description: 以标准 datetime 字符串格式表示的所有实例的开始时间： "THH： mm： ss： mmm"。
           type:
             - string
