--- a/docs/docs-ref-autogen/word_1_2/word/word.breaktype.yml
+++ b/docs/docs-ref-autogen/word_1_2/word/word.breaktype.yml
@@ -1,25 +1,25 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: word.Word.BreakType
+  - uid: 'word!Word.BreakType:enum'
     summary: |-
       指定分页符的窗体。
 
-      \[[API 集: WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: Word.BreakType
     fullName: Word.BreakType
     langs:
       - typeScript
     type: enum
-    package: word
+    package: word!
     children:
-      - word.Word.BreakType.line
-      - word.Word.BreakType.next
-      - word.Word.BreakType.page
-      - word.Word.BreakType.sectionContinuous
-      - word.Word.BreakType.sectionEven
-      - word.Word.BreakType.sectionNext
-      - word.Word.BreakType.sectionOdd
-  - uid: word.Word.BreakType.line
+      - 'word!Word.BreakType.line:member'
+      - 'word!Word.BreakType.next:member'
+      - 'word!Word.BreakType.page:member'
+      - 'word!Word.BreakType.sectionContinuous:member'
+      - 'word!Word.BreakType.sectionEven:member'
+      - 'word!Word.BreakType.sectionNext:member'
+      - 'word!Word.BreakType.sectionOdd:member'
+  - uid: 'word!Word.BreakType.line:member'
     summary: 换行符。
     name: line
     fullName: line
@@ -27,7 +27,7 @@ items:
       - typeScript
     type: field
     numericValue: '"Line"'
-  - uid: word.Word.BreakType.next
+  - uid: 'word!Word.BreakType.next:member'
     deprecated:
       content: Use sectionNext instead.
     name: next
@@ -36,7 +36,7 @@ items:
       - typeScript
     type: field
     numericValue: '"Next"'
-  - uid: word.Word.BreakType.page
+  - uid: 'word!Word.BreakType.page:member'
     summary: 插入点处的分页符。
     name: page
     fullName: page
@@ -44,7 +44,7 @@ items:
       - typeScript
     type: field
     numericValue: '"Page"'
-  - uid: word.Word.BreakType.sectionContinuous
+  - uid: 'word!Word.BreakType.sectionContinuous:member'
     summary: 新节不包含相应分页符。
     name: sectionContinuous
     fullName: sectionContinuous
@@ -52,7 +52,7 @@ items:
       - typeScript
     type: field
     numericValue: '"SectionContinuous"'
-  - uid: word.Word.BreakType.sectionEven
+  - uid: 'word!Word.BreakType.sectionEven:member'
     summary: 使下一节从下一偶数页开始的分节符。如果分节符落入偶数页，则 Word 将下一奇数页留为空白。
     name: sectionEven
     fullName: sectionEven
@@ -60,7 +60,7 @@ items:
       - typeScript
     type: field
     numericValue: '"SectionEven"'
-  - uid: word.Word.BreakType.sectionNext
+  - uid: 'word!Word.BreakType.sectionNext:member'
     summary: 分节符在下一页。
     name: sectionNext
     fullName: sectionNext
@@ -68,7 +68,7 @@ items:
       - typeScript
     type: field
     numericValue: '"SectionNext"'
-  - uid: word.Word.BreakType.sectionOdd
+  - uid: 'word!Word.BreakType.sectionOdd:member'
     summary: 使下一节从下一奇数页开始的分节符。如果分节符落入奇数页，则 Word 将下一偶数页留为空白。
     name: sectionOdd
     fullName: sectionOdd
