--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartseriesloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartseriesloadoptions.yml
@@ -1,43 +1,43 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.ChartSeriesLoadOptions
+  - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions:interface'
     summary: |-
       代表图表上的系列。
 
-      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.ChartSeriesLoadOptions
     fullName: Excel.Interfaces.ChartSeriesLoadOptions
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.ChartSeriesLoadOptions.$all
-      - excel.Excel.Interfaces.ChartSeriesLoadOptions.axisGroup
-      - excel.Excel.Interfaces.ChartSeriesLoadOptions.chartType
-      - excel.Excel.Interfaces.ChartSeriesLoadOptions.dataLabels
-      - excel.Excel.Interfaces.ChartSeriesLoadOptions.doughnutHoleSize
-      - excel.Excel.Interfaces.ChartSeriesLoadOptions.explosion
-      - excel.Excel.Interfaces.ChartSeriesLoadOptions.filtered
-      - excel.Excel.Interfaces.ChartSeriesLoadOptions.firstSliceAngle
-      - excel.Excel.Interfaces.ChartSeriesLoadOptions.format
-      - excel.Excel.Interfaces.ChartSeriesLoadOptions.gapWidth
-      - excel.Excel.Interfaces.ChartSeriesLoadOptions.hasDataLabels
-      - excel.Excel.Interfaces.ChartSeriesLoadOptions.invertIfNegative
-      - excel.Excel.Interfaces.ChartSeriesLoadOptions.markerBackgroundColor
-      - excel.Excel.Interfaces.ChartSeriesLoadOptions.markerForegroundColor
-      - excel.Excel.Interfaces.ChartSeriesLoadOptions.markerSize
-      - excel.Excel.Interfaces.ChartSeriesLoadOptions.markerStyle
-      - excel.Excel.Interfaces.ChartSeriesLoadOptions.name
-      - excel.Excel.Interfaces.ChartSeriesLoadOptions.overlap
-      - excel.Excel.Interfaces.ChartSeriesLoadOptions.plotOrder
-      - excel.Excel.Interfaces.ChartSeriesLoadOptions.points
-      - excel.Excel.Interfaces.ChartSeriesLoadOptions.secondPlotSize
-      - excel.Excel.Interfaces.ChartSeriesLoadOptions.showShadow
-      - excel.Excel.Interfaces.ChartSeriesLoadOptions.smooth
-      - excel.Excel.Interfaces.ChartSeriesLoadOptions.splitType
-      - excel.Excel.Interfaces.ChartSeriesLoadOptions.varyByCategories
-  - uid: excel.Excel.Interfaces.ChartSeriesLoadOptions.$all
+      - 'excel!Excel.Interfaces.ChartSeriesLoadOptions#$all:member'
+      - 'excel!Excel.Interfaces.ChartSeriesLoadOptions#axisGroup:member'
+      - 'excel!Excel.Interfaces.ChartSeriesLoadOptions#chartType:member'
+      - 'excel!Excel.Interfaces.ChartSeriesLoadOptions#dataLabels:member'
+      - 'excel!Excel.Interfaces.ChartSeriesLoadOptions#doughnutHoleSize:member'
+      - 'excel!Excel.Interfaces.ChartSeriesLoadOptions#explosion:member'
+      - 'excel!Excel.Interfaces.ChartSeriesLoadOptions#filtered:member'
+      - 'excel!Excel.Interfaces.ChartSeriesLoadOptions#firstSliceAngle:member'
+      - 'excel!Excel.Interfaces.ChartSeriesLoadOptions#format:member'
+      - 'excel!Excel.Interfaces.ChartSeriesLoadOptions#gapWidth:member'
+      - 'excel!Excel.Interfaces.ChartSeriesLoadOptions#hasDataLabels:member'
+      - 'excel!Excel.Interfaces.ChartSeriesLoadOptions#invertIfNegative:member'
+      - 'excel!Excel.Interfaces.ChartSeriesLoadOptions#markerBackgroundColor:member'
+      - 'excel!Excel.Interfaces.ChartSeriesLoadOptions#markerForegroundColor:member'
+      - 'excel!Excel.Interfaces.ChartSeriesLoadOptions#markerSize:member'
+      - 'excel!Excel.Interfaces.ChartSeriesLoadOptions#markerStyle:member'
+      - 'excel!Excel.Interfaces.ChartSeriesLoadOptions#name:member'
+      - 'excel!Excel.Interfaces.ChartSeriesLoadOptions#overlap:member'
+      - 'excel!Excel.Interfaces.ChartSeriesLoadOptions#plotOrder:member'
+      - 'excel!Excel.Interfaces.ChartSeriesLoadOptions#points:member'
+      - 'excel!Excel.Interfaces.ChartSeriesLoadOptions#secondPlotSize:member'
+      - 'excel!Excel.Interfaces.ChartSeriesLoadOptions#showShadow:member'
+      - 'excel!Excel.Interfaces.ChartSeriesLoadOptions#smooth:member'
+      - 'excel!Excel.Interfaces.ChartSeriesLoadOptions#splitType:member'
+      - 'excel!Excel.Interfaces.ChartSeriesLoadOptions#varyByCategories:member'
+  - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#$all:member'
     name: $all
     fullName: $all
     langs:
@@ -48,11 +48,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartSeriesLoadOptions.axisGroup
+  - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#axisGroup:member'
     summary: |-
       返回或设置指定系列的组。 读/写
 
-      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: axisGroup
     fullName: axisGroup
     langs:
@@ -63,11 +63,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartSeriesLoadOptions.chartType
+  - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#chartType:member'
     summary: |-
-      表示系列的图表类型。 有关详细信息, 请参阅 ChartType。
+      表示系列的图表类型。 有关详细信息，请参阅 ChartType。
 
-      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: chartType
     fullName: chartType
     langs:
@@ -78,11 +78,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartSeriesLoadOptions.dataLabels
+  - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#dataLabels:member'
     summary: |-
       表示系列中所有数据标签的集合。
 
-      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: dataLabels
     fullName: dataLabels
     langs:
@@ -92,12 +92,12 @@ items:
       content: 'dataLabels?: Excel.Interfaces.ChartDataLabelsLoadOptions;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartDataLabelsLoadOptions
-  - uid: excel.Excel.Interfaces.ChartSeriesLoadOptions.doughnutHoleSize
+          - 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions:interface'
+  - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#doughnutHoleSize:member'
     summary: |-
       表示图表系列的圆环孔大小。 仅对圆环图和分离型圆环图有效。 对无效图表引发无效参数异常。
 
-      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: doughnutHoleSize
     fullName: doughnutHoleSize
     langs:
@@ -108,11 +108,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartSeriesLoadOptions.explosion
+  - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#explosion:member'
     summary: |-
       返回或设置饼图或圆环图切片的分解程度值。 如果未分解（切片尖端位于饼图中心），则返回 0（零）。 读/写。
 
-      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: explosion
     fullName: explosion
     langs:
@@ -123,11 +123,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartSeriesLoadOptions.filtered
+  - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#filtered:member'
     summary: |-
       该布尔值表示是否筛选系列。 不适用于曲面图。
 
-      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: filtered
     fullName: filtered
     langs:
@@ -138,11 +138,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartSeriesLoadOptions.firstSliceAngle
+  - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#firstSliceAngle:member'
     summary: |-
       返回或设置第一个饼图或圆环图切片的角度，以度为单位（从垂直方向起为顺时针）。 只适用于饼图、三维饼图和圆环图。 可以是 0 到 360 之间的值。 读/写
 
-      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: firstSliceAngle
     fullName: firstSliceAngle
     langs:
@@ -153,11 +153,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartSeriesLoadOptions.format
+  - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#format:member'
     summary: |-
       表示图表系列的格式，包括填充和线条格式。
 
-      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -167,12 +167,12 @@ items:
       content: 'format?: Excel.Interfaces.ChartSeriesFormatLoadOptions;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartSeriesFormatLoadOptions
-  - uid: excel.Excel.Interfaces.ChartSeriesLoadOptions.gapWidth
+          - 'excel!Excel.Interfaces.ChartSeriesFormatLoadOptions:interface'
+  - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#gapWidth:member'
     summary: |-
-      表示图表系列的间隙宽度。 仅对条形图和柱形图有效, 以及折线图和饼图的特定类。 对无效图表引发无效参数异常。
+      表示图表系列的间隙宽度。 仅对条形图和柱形图有效，以及折线图和饼图的特定类。 对无效图表引发无效参数异常。
 
-      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: gapWidth
     fullName: gapWidth
     langs:
@@ -183,11 +183,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartSeriesLoadOptions.hasDataLabels
+  - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#hasDataLabels:member'
     summary: |-
       该布尔值表示系列是否具有数据标签。
 
-      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: hasDataLabels
     fullName: hasDataLabels
     langs:
@@ -198,11 +198,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartSeriesLoadOptions.invertIfNegative
+  - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#invertIfNegative:member'
     summary: |-
       如果 Excel 在值为负数时反转项目中的图案，则为 True。 读/写。
 
-      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: invertIfNegative
     fullName: invertIfNegative
     langs:
@@ -213,11 +213,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartSeriesLoadOptions.markerBackgroundColor
+  - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#markerBackgroundColor:member'
     summary: |-
       表示图表系列的标记背景色。
 
-      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerBackgroundColor
     fullName: markerBackgroundColor
     langs:
@@ -228,11 +228,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartSeriesLoadOptions.markerForegroundColor
+  - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#markerForegroundColor:member'
     summary: |-
       表示图表系列的标记前景色。
 
-      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerForegroundColor
     fullName: markerForegroundColor
     langs:
@@ -243,11 +243,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartSeriesLoadOptions.markerSize
+  - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#markerSize:member'
     summary: |-
       表示图表系列的标记大小。
 
-      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerSize
     fullName: markerSize
     langs:
@@ -258,11 +258,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartSeriesLoadOptions.markerStyle
+  - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#markerStyle:member'
     summary: |-
-      表示图表系列的标记类型。 有关详细信息, 请参阅 ChartMarkerStyle。
+      表示图表系列的标记类型。 有关详细信息，请参阅 ChartMarkerStyle。
 
-      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerStyle
     fullName: markerStyle
     langs:
@@ -273,11 +273,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartSeriesLoadOptions.name
+  - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#name:member'
     summary: |-
       表示图表中某个系列的名称。
 
-      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -288,11 +288,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartSeriesLoadOptions.overlap
+  - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#overlap:member'
     summary: |-
       指定条柱的摆放方式。 可以是–100到100之间的值。 只适用于二维条形图和二维柱形图。 读/写。
 
-      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: overlap
     fullName: overlap
     langs:
@@ -303,11 +303,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartSeriesLoadOptions.plotOrder
+  - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#plotOrder:member'
     summary: |-
       表示图表组中某个图表系列的绘制顺序。
 
-      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: plotOrder
     fullName: plotOrder
     langs:
@@ -318,11 +318,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartSeriesLoadOptions.points
+  - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#points:member'
     summary: |-
       表示系列中所有数据点的集合。
 
-      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: points
     fullName: points
     langs:
@@ -332,12 +332,12 @@ items:
       content: 'points?: Excel.Interfaces.ChartPointsCollectionLoadOptions;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartPointsCollectionLoadOptions
-  - uid: excel.Excel.Interfaces.ChartSeriesLoadOptions.secondPlotSize
+          - 'excel!Excel.Interfaces.ChartPointsCollectionLoadOptions:interface'
+  - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#secondPlotSize:member'
     summary: |-
       返回或设置复合饼图或复合条饼图的辅助分区的大小，以占主饼图大小的百分比表示。 可以是 5 到 200 之间的值。 读/写。
 
-      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: secondPlotSize
     fullName: secondPlotSize
     langs:
@@ -348,11 +348,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartSeriesLoadOptions.showShadow
+  - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#showShadow:member'
     summary: |-
       表示系列是否具有阴影的布尔值。
 
-      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showShadow
     fullName: showShadow
     langs:
@@ -363,11 +363,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartSeriesLoadOptions.smooth
+  - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#smooth:member'
     summary: |-
       该布尔值表示系列是否平滑。 仅适用于折线图和散点图。
 
-      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: smooth
     fullName: smooth
     langs:
@@ -378,11 +378,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartSeriesLoadOptions.splitType
+  - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#splitType:member'
     summary: |-
       返回或设置复合饼图或复合条饼图中两个分区的拆分方式。 读/写。
 
-      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: splitType
     fullName: splitType
     langs:
@@ -393,11 +393,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartSeriesLoadOptions.varyByCategories
+  - uid: 'excel!Excel.Interfaces.ChartSeriesLoadOptions#varyByCategories:member'
     summary: |-
       如果 Excel 为每个数据标记分配不同的颜色或图案，则为 True。 图表必须只包含一个系列。 读/写。
 
-      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: varyByCategories
     fullName: varyByCategories
     langs:
@@ -408,3 +408,10 @@ items:
       return:
         type:
           - boolean
+references:
+  - uid: 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions:interface'
+    name: Excel.Interfaces.ChartDataLabelsLoadOptions
+  - uid: 'excel!Excel.Interfaces.ChartSeriesFormatLoadOptions:interface'
+    name: Excel.Interfaces.ChartSeriesFormatLoadOptions
+  - uid: 'excel!Excel.Interfaces.ChartPointsCollectionLoadOptions:interface'
+    name: Excel.Interfaces.ChartPointsCollectionLoadOptions
