--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.conditionalformatruleloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.conditionalformatruleloadoptions.yml
@@ -1,22 +1,22 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.ConditionalFormatRuleLoadOptions
+  - uid: 'excel!Excel.Interfaces.ConditionalFormatRuleLoadOptions:interface'
     summary: |-
       表示适用于所有传统规则/格式配对的规则。
 
-      \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.ConditionalFormatRuleLoadOptions
     fullName: Excel.Interfaces.ConditionalFormatRuleLoadOptions
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.ConditionalFormatRuleLoadOptions.$all
-      - excel.Excel.Interfaces.ConditionalFormatRuleLoadOptions.formula
-      - excel.Excel.Interfaces.ConditionalFormatRuleLoadOptions.formulaLocal
-      - excel.Excel.Interfaces.ConditionalFormatRuleLoadOptions.formulaR1C1
-  - uid: excel.Excel.Interfaces.ConditionalFormatRuleLoadOptions.$all
+      - 'excel!Excel.Interfaces.ConditionalFormatRuleLoadOptions#$all:member'
+      - 'excel!Excel.Interfaces.ConditionalFormatRuleLoadOptions#formula:member'
+      - 'excel!Excel.Interfaces.ConditionalFormatRuleLoadOptions#formulaLocal:member'
+      - 'excel!Excel.Interfaces.ConditionalFormatRuleLoadOptions#formulaR1C1:member'
+  - uid: 'excel!Excel.Interfaces.ConditionalFormatRuleLoadOptions#$all:member'
     name: $all
     fullName: $all
     langs:
@@ -27,11 +27,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ConditionalFormatRuleLoadOptions.formula
+  - uid: 'excel!Excel.Interfaces.ConditionalFormatRuleLoadOptions#formula:member'
     summary: |-
       如果需要，公式可对条件格式规则进行求值。
 
-      \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formula
     fullName: formula
     langs:
@@ -42,11 +42,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ConditionalFormatRuleLoadOptions.formulaLocal
+  - uid: 'excel!Excel.Interfaces.ConditionalFormatRuleLoadOptions#formulaLocal:member'
     summary: |-
       如果需要，公式可采用用户的语言对条件格式规则进行求值。
 
-      \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formulaLocal
     fullName: formulaLocal
     langs:
@@ -57,11 +57,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ConditionalFormatRuleLoadOptions.formulaR1C1
+  - uid: 'excel!Excel.Interfaces.ConditionalFormatRuleLoadOptions#formulaR1C1:member'
     summary: |-
       如果需要，公式可采用 R1C1 表示法对条件格式规则进行求值。
 
-      \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formulaR1C1
     fullName: formulaR1C1
     langs:
