--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.chartbinoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.chartbinoptions.yml
@@ -1,38 +1,38 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.ChartBinOptions
+  - uid: 'excel!Excel.ChartBinOptions:class'
     summary: |-
       封装直方图和排列图的容器选项。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ChartBinOptions
     fullName: Excel.ChartBinOptions
     langs:
       - typeScript
     type: class
     extends:
-      - 'OfficeExtension.ClientObject '
-    package: excel
+      - 'excel!OfficeExtension.ClientObject:class'
+    package: excel!
     children:
-      - excel.Excel.ChartBinOptions.allowOverflow
-      - excel.Excel.ChartBinOptions.allowUnderflow
-      - excel.Excel.ChartBinOptions.context
-      - excel.Excel.ChartBinOptions.count
-      - excel.Excel.ChartBinOptions.load
-      - excel.Excel.ChartBinOptions.load_1
-      - excel.Excel.ChartBinOptions.load_2
-      - excel.Excel.ChartBinOptions.overflowValue
-      - excel.Excel.ChartBinOptions.set
-      - excel.Excel.ChartBinOptions.set_1
-      - excel.Excel.ChartBinOptions.toJSON
-      - excel.Excel.ChartBinOptions.type
-      - excel.Excel.ChartBinOptions.underflowValue
-      - excel.Excel.ChartBinOptions.width
-  - uid: excel.Excel.ChartBinOptions.allowOverflow
+      - 'excel!Excel.ChartBinOptions#allowOverflow:member'
+      - 'excel!Excel.ChartBinOptions#allowUnderflow:member'
+      - 'excel!Excel.ChartBinOptions#context:member'
+      - 'excel!Excel.ChartBinOptions#count:member'
+      - 'excel!Excel.ChartBinOptions#load:member(1)'
+      - 'excel!Excel.ChartBinOptions#load:member(2)'
+      - 'excel!Excel.ChartBinOptions#load:member(3)'
+      - 'excel!Excel.ChartBinOptions#overflowValue:member'
+      - 'excel!Excel.ChartBinOptions#set:member(1)'
+      - 'excel!Excel.ChartBinOptions#set:member(2)'
+      - 'excel!Excel.ChartBinOptions#toJSON:member(1)'
+      - 'excel!Excel.ChartBinOptions#type:member'
+      - 'excel!Excel.ChartBinOptions#underflowValue:member'
+      - 'excel!Excel.ChartBinOptions#width:member'
+  - uid: 'excel!Excel.ChartBinOptions#allowOverflow:member'
     summary: |-
       指定是否在直方图或排列图中启用容器溢出。 读/写。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: allowOverflow
     fullName: allowOverflow
     langs:
@@ -43,11 +43,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.ChartBinOptions.allowUnderflow
+  - uid: 'excel!Excel.ChartBinOptions#allowUnderflow:member'
     summary: |-
       指定是否在直方图或排列图中启用容器下溢。 读/写。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: allowUnderflow
     fullName: allowUnderflow
     langs:
@@ -58,7 +58,7 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.ChartBinOptions.context
+  - uid: 'excel!Excel.ChartBinOptions#context:member'
     summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
@@ -69,12 +69,12 @@ items:
       content: 'context: RequestContext;'
       return:
         type:
-          - excel.Excel.RequestContext
-  - uid: excel.Excel.ChartBinOptions.count
+          - 'excel!Excel.RequestContext:class'
+  - uid: 'excel!Excel.ChartBinOptions#count:member'
     summary: |-
       返回或设置直方图或排列图的容器数量。 读/写。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: count
     fullName: count
     langs:
@@ -85,16 +85,16 @@ items:
       return:
         type:
           - number
-  - uid: excel.Excel.ChartBinOptions.load
+  - uid: 'excel!Excel.ChartBinOptions#load:member(1)'
     summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
     remarks: |-
-      除了此签名之外, 此方法还具有以下签名:
+      除了此签名之外，此方法还具有以下签名：
 
-      `load(option?: string | string[]): Excel.ChartBinOptions`-Where 选项是一个逗号分隔的字符串或一个字符串数组, 用于指定要加载的属性。
+      `load(option?: string | string[]): Excel.ChartBinOptions`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
 
-      `load(option?: { select?: string; expand?: string; }): Excel.ChartBinOptions`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。
+      `load(option?: { select?: string; expand?: string; }): Excel.ChartBinOptions`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
 
-      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.ChartBinOptions`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.ChartBinOptions`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
     name: load(option)
     fullName: load(option)
     langs:
@@ -104,15 +104,15 @@ items:
       content: 'load(option?: Excel.Interfaces.ChartBinOptionsLoadOptions): Excel.ChartBinOptions;'
       return:
         type:
-          - excel.Excel.ChartBinOptions
+          - 'excel!Excel.ChartBinOptions:class'
         description: ''
       parameters:
         - id: option
           description: ''
           type:
-            - excel.Excel.Interfaces.ChartBinOptionsLoadOptions
-  - uid: excel.Excel.ChartBinOptions.load_1
-    summary: '将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。'
+            - 'excel!Excel.Interfaces.ChartBinOptionsLoadOptions:interface'
+  - uid: 'excel!Excel.ChartBinOptions#load:member(2)'
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -122,15 +122,15 @@ items:
       content: 'load(propertyNames?: string | string[]): Excel.ChartBinOptions;'
       return:
         type:
-          - excel.Excel.ChartBinOptions
+          - 'excel!Excel.ChartBinOptions:class'
         description: ''
       parameters:
         - id: propertyNames
-          description: '一个以逗号分隔的字符串或字符串数组, 用于指定要加载的属性。'
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
-  - uid: excel.Excel.ChartBinOptions.load_2
-    summary: '将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。'
+  - uid: 'excel!Excel.ChartBinOptions#load:member(3)'
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -140,18 +140,18 @@ items:
       content: 'load(propertyNamesAndPaths?: { select?: string; expand?: string; }): Excel.ChartBinOptions;'
       return:
         type:
-          - excel.Excel.ChartBinOptions
+          - 'excel!Excel.ChartBinOptions:class'
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '其中, propertyNamesAndPaths 是用逗号分隔的字符串, 用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串, 用于指定要加载的导航属性。'
+          description: 其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。
           type:
             - '{ select?: string; expand?: string; }'
-  - uid: excel.Excel.ChartBinOptions.overflowValue
+  - uid: 'excel!Excel.ChartBinOptions#overflowValue:member'
     summary: |-
       返回或设置直方图或排列图的容器溢出值。 读/写。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: overflowValue
     fullName: overflowValue
     langs:
@@ -162,10 +162,10 @@ items:
       return:
         type:
           - number
-  - uid: excel.Excel.ChartBinOptions.set
+  - uid: 'excel!Excel.ChartBinOptions#set:member(1)'
     summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      此方法具有以下附加签名:
+      此方法具有以下附加签名：
 
       `set(properties: Excel.ChartBinOptions): void`
     name: 'set(properties, options)'
@@ -181,14 +181,14 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: '一个 JavaScript 对象, 其属性的结构 isomorphically 为在其上调用方法的对象的属性。'
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
-            - Interfaces.ChartBinOptionsUpdateData
+            - 'excel!Excel.Interfaces.ChartBinOptionsUpdateData:interface'
         - id: options
-          description: '提供一个选项, 以在 properties 对象尝试设置任何只读属性时禁止显示错误。'
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - OfficeExtension.UpdateOptions
-  - uid: excel.Excel.ChartBinOptions.set_1
+            - 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'excel!Excel.ChartBinOptions#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
@@ -205,9 +205,9 @@ items:
         - id: properties
           description: ''
           type:
-            - excel.Excel.ChartBinOptions
-  - uid: excel.Excel.ChartBinOptions.toJSON
-    summary: '重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartBinOptions 对象是 API 对象, 但`toJSON`方法返回一个无格式的 JavaScript 对象 (类型为`Excel.Interfaces.ChartBinOptionsData`<!-- -->), 其中包含原始对象中所有已加载的子属性的浅表副本。'
+            - 'excel!Excel.ChartBinOptions:class'
+  - uid: 'excel!Excel.ChartBinOptions#toJSON:member(1)'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartBinOptions 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartBinOptionsData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -217,13 +217,13 @@ items:
       content: 'toJSON(): Excel.Interfaces.ChartBinOptionsData;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartBinOptionsData
+          - 'excel!Excel.Interfaces.ChartBinOptionsData:interface'
         description: ''
-  - uid: excel.Excel.ChartBinOptions.type
+  - uid: 'excel!Excel.ChartBinOptions#type:member'
     summary: |-
       返回或设置直方图或排列图的容器类型。 读/写。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
@@ -233,12 +233,12 @@ items:
       content: 'type: Excel.ChartBinType | "Category" | "Auto" | "BinWidth" | "BinCount";'
       return:
         type:
-          - Excel.ChartBinType | "Category" | "Auto" | "BinWidth" | "BinCount"
-  - uid: excel.Excel.ChartBinOptions.underflowValue
+          - 'excel!Excel.ChartBinOptions#type~0:complex'
+  - uid: 'excel!Excel.ChartBinOptions#underflowValue:member'
     summary: |-
       返回或设置直方图或排列图的容器下溢值。 读/写。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: underflowValue
     fullName: underflowValue
     langs:
@@ -249,11 +249,11 @@ items:
       return:
         type:
           - number
-  - uid: excel.Excel.ChartBinOptions.width
+  - uid: 'excel!Excel.ChartBinOptions#width:member'
     summary: |-
       返回或设置直方图或排列图的容器宽度值。 读/写。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
     fullName: width
     langs:
@@ -264,3 +264,27 @@ items:
       return:
         type:
           - number
+references:
+  - uid: 'excel!OfficeExtension.ClientObject:class'
+    name: OfficeExtension.ClientObject
+  - uid: 'excel!Excel.RequestContext:class'
+    name: RequestContext
+  - uid: 'excel!Excel.ChartBinOptions:class'
+    name: Excel.ChartBinOptions
+  - uid: 'excel!Excel.Interfaces.ChartBinOptionsLoadOptions:interface'
+    name: Excel.Interfaces.ChartBinOptionsLoadOptions
+  - uid: 'excel!Excel.Interfaces.ChartBinOptionsUpdateData:interface'
+    name: Interfaces.ChartBinOptionsUpdateData
+  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+    name: OfficeExtension.UpdateOptions
+  - uid: 'excel!Excel.Interfaces.ChartBinOptionsData:interface'
+    name: Excel.Interfaces.ChartBinOptionsData
+  - uid: 'excel!Excel.ChartBinOptions#type~0:complex'
+    name: Excel.ChartBinType | "Category" | "Auto" | "BinWidth" | "BinCount"
+    fullName: Excel.ChartBinType | "Category" | "Auto" | "BinWidth" | "BinCount"
+    spec.typeScript:
+      - uid: 'excel!Excel.ChartBinType:enum'
+        name: Excel.ChartBinType
+        fullName: Excel.ChartBinType
+      - name: ' | "Category" | "Auto" | "BinWidth" | "BinCount"'
+        fullName: ' | "Category" | "Auto" | "BinWidth" | "BinCount"'
