--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.conditionalformatruleupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.conditionalformatruleupdatedata.yml
@@ -1,22 +1,22 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.ConditionalFormatRuleUpdateData
-    summary: '一个用于更新 ConditionalFormatRule 对象上的数据的接口, 可用于 "conditionalFormatRule (<!-- -->{ ... }<!-- -->)".'
+  - uid: 'excel!Excel.Interfaces.ConditionalFormatRuleUpdateData:interface'
+    summary: '一个用于更新 ConditionalFormatRule 对象上的数据的接口，可用于 "conditionalFormatRule （<!-- -->{ ... }<!-- -->)".'
     name: Excel.Interfaces.ConditionalFormatRuleUpdateData
     fullName: Excel.Interfaces.ConditionalFormatRuleUpdateData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.ConditionalFormatRuleUpdateData.formula
-      - excel.Excel.Interfaces.ConditionalFormatRuleUpdateData.formulaLocal
-      - excel.Excel.Interfaces.ConditionalFormatRuleUpdateData.formulaR1C1
-  - uid: excel.Excel.Interfaces.ConditionalFormatRuleUpdateData.formula
+      - 'excel!Excel.Interfaces.ConditionalFormatRuleUpdateData#formula:member'
+      - 'excel!Excel.Interfaces.ConditionalFormatRuleUpdateData#formulaLocal:member'
+      - 'excel!Excel.Interfaces.ConditionalFormatRuleUpdateData#formulaR1C1:member'
+  - uid: 'excel!Excel.Interfaces.ConditionalFormatRuleUpdateData#formula:member'
     summary: |-
       如果需要，公式可对条件格式规则进行求值。
 
-      \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formula
     fullName: formula
     langs:
@@ -27,11 +27,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.Interfaces.ConditionalFormatRuleUpdateData.formulaLocal
+  - uid: 'excel!Excel.Interfaces.ConditionalFormatRuleUpdateData#formulaLocal:member'
     summary: |-
       如果需要，公式可采用用户的语言对条件格式规则进行求值。
 
-      \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formulaLocal
     fullName: formulaLocal
     langs:
@@ -42,11 +42,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.Interfaces.ConditionalFormatRuleUpdateData.formulaR1C1
+  - uid: 'excel!Excel.Interfaces.ConditionalFormatRuleUpdateData#formulaR1C1:member'
     summary: |-
       如果需要，公式可采用 R1C1 表示法对条件格式规则进行求值。
 
-      \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formulaR1C1
     fullName: formulaR1C1
     langs:
