--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.notetagdata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.notetagdata.yml
@@ -1,22 +1,22 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: onenote.OneNote.Interfaces.NoteTagData
-    summary: 描述通过调用 "noteTag ()" 返回的数据的接口。
+  - uid: 'onenote!OneNote.Interfaces.NoteTagData:interface'
+    summary: 描述通过调用 "noteTag （）" 返回的数据的接口。
     name: OneNote.Interfaces.NoteTagData
     fullName: OneNote.Interfaces.NoteTagData
     langs:
       - typeScript
     type: interface
-    package: onenote
+    package: onenote!
     children:
-      - onenote.OneNote.Interfaces.NoteTagData.id
-      - onenote.OneNote.Interfaces.NoteTagData.status
-      - onenote.OneNote.Interfaces.NoteTagData.type
-  - uid: onenote.OneNote.Interfaces.NoteTagData.id
+      - 'onenote!OneNote.Interfaces.NoteTagData#id:member'
+      - 'onenote!OneNote.Interfaces.NoteTagData#status:member'
+      - 'onenote!OneNote.Interfaces.NoteTagData#type:member'
+  - uid: 'onenote!OneNote.Interfaces.NoteTagData#id:member'
     summary: |-
       获取 NoteTag 对象的 Id。 只读。
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -27,11 +27,11 @@ items:
       return:
         type:
           - string
-  - uid: onenote.OneNote.Interfaces.NoteTagData.status
+  - uid: 'onenote!OneNote.Interfaces.NoteTagData#status:member'
     summary: |-
       获取 NoteTag 对象的状态。 只读。
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: status
     fullName: status
     langs:
@@ -41,12 +41,12 @@ items:
       content: 'status?: OneNote.NoteTagStatus | "Unknown" | "Normal" | "Completed" | "Disabled" | "OutlookTask" | "TaskNotSyncedYet" | "TaskRemoved";'
       return:
         type:
-          - OneNote.NoteTagStatus | "Unknown" | "Normal" | "Completed" | "Disabled" | "OutlookTask" | "TaskNotSyncedYet" | "TaskRemoved"
-  - uid: onenote.OneNote.Interfaces.NoteTagData.type
+          - 'onenote!OneNote.Interfaces.NoteTagData#status~0:complex'
+  - uid: 'onenote!OneNote.Interfaces.NoteTagData#type:member'
     summary: |-
       获取 NoteTag 对象的类型。 只读。
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
@@ -56,4 +56,23 @@ items:
       content: 'type?: OneNote.NoteTagType | "Unknown" | "ToDo" | "Important" | "Question" | "Contact" | "Address" | "PhoneNumber" | "Website" | "Idea" | "Critical" | "ToDoPriority1" | "ToDoPriority2";'
       return:
         type:
-          - OneNote.NoteTagType | "Unknown" | "ToDo" | "Important" | "Question" | "Contact" | "Address" | "PhoneNumber" | "Website" | "Idea" | "Critical" | "ToDoPriority1" | "ToDoPriority2"
+          - 'onenote!OneNote.Interfaces.NoteTagData#type~0:complex'
+references:
+  - uid: 'onenote!OneNote.Interfaces.NoteTagData#status~0:complex'
+    name: OneNote.NoteTagStatus | "Unknown" | "Normal" | "Completed" | "Disabled" | "OutlookTask" | "TaskNotSyncedYet" | "TaskRemoved"
+    fullName: OneNote.NoteTagStatus | "Unknown" | "Normal" | "Completed" | "Disabled" | "OutlookTask" | "TaskNotSyncedYet" | "TaskRemoved"
+    spec.typeScript:
+      - uid: 'onenote!OneNote.NoteTagStatus:enum'
+        name: OneNote.NoteTagStatus
+        fullName: OneNote.NoteTagStatus
+      - name: ' | "Unknown" | "Normal" | "Completed" | "Disabled" | "OutlookTask" | "TaskNotSyncedYet" | "TaskRemoved"'
+        fullName: ' | "Unknown" | "Normal" | "Completed" | "Disabled" | "OutlookTask" | "TaskNotSyncedYet" | "TaskRemoved"'
+  - uid: 'onenote!OneNote.Interfaces.NoteTagData#type~0:complex'
+    name: OneNote.NoteTagType | "Unknown" | "ToDo" | "Important" | "Question" | "Contact" | "Address" | "PhoneNumber" | "Website" | "Idea" | "Critical" | "ToDoPriority1" | "ToDoPriority2"
+    fullName: OneNote.NoteTagType | "Unknown" | "ToDo" | "Important" | "Question" | "Contact" | "Address" | "PhoneNumber" | "Website" | "Idea" | "Critical" | "ToDoPriority1" | "ToDoPriority2"
+    spec.typeScript:
+      - uid: 'onenote!OneNote.NoteTagType:enum'
+        name: OneNote.NoteTagType
+        fullName: OneNote.NoteTagType
+      - name: ' | "Unknown" | "ToDo" | "Important" | "Question" | "Contact" | "Address" | "PhoneNumber" | "Website" | "Idea" | "Critical" | "ToDoPriority1" | "ToDoPriority2"'
+        fullName: ' | "Unknown" | "ToDo" | "Important" | "Question" | "Contact" | "Address" | "PhoneNumber" | "Website" | "Idea" | "Critical" | "ToDoPriority1" | "ToDoPriority2"'
