--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.sectioncollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.sectioncollectionloadoptions.yml
@@ -1,29 +1,29 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: onenote.OneNote.Interfaces.SectionCollectionLoadOptions
+  - uid: 'onenote!OneNote.Interfaces.SectionCollectionLoadOptions:interface'
     summary: |-
       表示分区的集合。
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: OneNote.Interfaces.SectionCollectionLoadOptions
     fullName: OneNote.Interfaces.SectionCollectionLoadOptions
     langs:
       - typeScript
     type: interface
-    package: onenote
+    package: onenote!
     children:
-      - onenote.OneNote.Interfaces.SectionCollectionLoadOptions.$all
-      - onenote.OneNote.Interfaces.SectionCollectionLoadOptions.clientUrl
-      - onenote.OneNote.Interfaces.SectionCollectionLoadOptions.id
-      - onenote.OneNote.Interfaces.SectionCollectionLoadOptions.isEncrypted
-      - onenote.OneNote.Interfaces.SectionCollectionLoadOptions.isLocked
-      - onenote.OneNote.Interfaces.SectionCollectionLoadOptions.name
-      - onenote.OneNote.Interfaces.SectionCollectionLoadOptions.notebook
-      - onenote.OneNote.Interfaces.SectionCollectionLoadOptions.pages
-      - onenote.OneNote.Interfaces.SectionCollectionLoadOptions.parentSectionGroup
-      - onenote.OneNote.Interfaces.SectionCollectionLoadOptions.parentSectionGroupOrNull
-      - onenote.OneNote.Interfaces.SectionCollectionLoadOptions.webUrl
-  - uid: onenote.OneNote.Interfaces.SectionCollectionLoadOptions.$all
+      - 'onenote!OneNote.Interfaces.SectionCollectionLoadOptions#$all:member'
+      - 'onenote!OneNote.Interfaces.SectionCollectionLoadOptions#clientUrl:member'
+      - 'onenote!OneNote.Interfaces.SectionCollectionLoadOptions#id:member'
+      - 'onenote!OneNote.Interfaces.SectionCollectionLoadOptions#isEncrypted:member'
+      - 'onenote!OneNote.Interfaces.SectionCollectionLoadOptions#isLocked:member'
+      - 'onenote!OneNote.Interfaces.SectionCollectionLoadOptions#name:member'
+      - 'onenote!OneNote.Interfaces.SectionCollectionLoadOptions#notebook:member'
+      - 'onenote!OneNote.Interfaces.SectionCollectionLoadOptions#pages:member'
+      - 'onenote!OneNote.Interfaces.SectionCollectionLoadOptions#parentSectionGroup:member'
+      - 'onenote!OneNote.Interfaces.SectionCollectionLoadOptions#parentSectionGroupOrNull:member'
+      - 'onenote!OneNote.Interfaces.SectionCollectionLoadOptions#webUrl:member'
+  - uid: 'onenote!OneNote.Interfaces.SectionCollectionLoadOptions#$all:member'
     name: $all
     fullName: $all
     langs:
@@ -34,11 +34,11 @@ items:
       return:
         type:
           - boolean
-  - uid: onenote.OneNote.Interfaces.SectionCollectionLoadOptions.clientUrl
+  - uid: 'onenote!OneNote.Interfaces.SectionCollectionLoadOptions#clientUrl:member'
     summary: |-
-      对于集合中的每个项目: 该部分的客户端 url。 只读
+      对于集合中的每个项目：该部分的客户端 url。 只读
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: clientUrl
     fullName: clientUrl
     langs:
@@ -49,11 +49,11 @@ items:
       return:
         type:
           - boolean
-  - uid: onenote.OneNote.Interfaces.SectionCollectionLoadOptions.id
+  - uid: 'onenote!OneNote.Interfaces.SectionCollectionLoadOptions#id:member'
     summary: |-
-      对于集合中的每一项: 获取节的 ID。 只读。
+      对于集合中的每一项：获取节的 ID。 只读。
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -64,11 +64,11 @@ items:
       return:
         type:
           - boolean
-  - uid: onenote.OneNote.Interfaces.SectionCollectionLoadOptions.isEncrypted
+  - uid: 'onenote!OneNote.Interfaces.SectionCollectionLoadOptions#isEncrypted:member'
     summary: |-
-      对于集合中的每一项: 如果使用密码加密此节, 则为 True。 只读
+      对于集合中的每一项：如果使用密码加密此节，则为 True。 只读
 
-      \[[API 集: OneNoteApi 1.2](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.2](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: isEncrypted
     fullName: isEncrypted
     langs:
@@ -79,11 +79,11 @@ items:
       return:
         type:
           - boolean
-  - uid: onenote.OneNote.Interfaces.SectionCollectionLoadOptions.isLocked
+  - uid: 'onenote!OneNote.Interfaces.SectionCollectionLoadOptions#isLocked:member'
     summary: |-
-      对于集合中的每一项: 如果此节被锁定, 则为 True。 只读
+      对于集合中的每一项：如果此节被锁定，则为 True。 只读
 
-      \[[API 集: OneNoteApi 1.2](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.2](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: isLocked
     fullName: isLocked
     langs:
@@ -94,11 +94,11 @@ items:
       return:
         type:
           - boolean
-  - uid: onenote.OneNote.Interfaces.SectionCollectionLoadOptions.name
+  - uid: 'onenote!OneNote.Interfaces.SectionCollectionLoadOptions#name:member'
     summary: |-
-      对于集合中的每一项: 获取节的名称。 只读。
+      对于集合中的每一项：获取节的名称。 只读。
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -109,11 +109,11 @@ items:
       return:
         type:
           - boolean
-  - uid: onenote.OneNote.Interfaces.SectionCollectionLoadOptions.notebook
+  - uid: 'onenote!OneNote.Interfaces.SectionCollectionLoadOptions#notebook:member'
     summary: |-
-      对于集合中的每一项: 获取包含该部分的笔记本。
+      对于集合中的每一项：获取包含该部分的笔记本。
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: notebook
     fullName: notebook
     langs:
@@ -123,12 +123,12 @@ items:
       content: 'notebook?: OneNote.Interfaces.NotebookLoadOptions;'
       return:
         type:
-          - onenote.OneNote.Interfaces.NotebookLoadOptions
-  - uid: onenote.OneNote.Interfaces.SectionCollectionLoadOptions.pages
+          - 'onenote!OneNote.Interfaces.NotebookLoadOptions:interface'
+  - uid: 'onenote!OneNote.Interfaces.SectionCollectionLoadOptions#pages:member'
     summary: |-
-      对于集合中的每个项目: 该部分中的页面的集合。 只读
+      对于集合中的每个项目：该部分中的页面的集合。 只读
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: pages
     fullName: pages
     langs:
@@ -138,12 +138,12 @@ items:
       content: 'pages?: OneNote.Interfaces.PageCollectionLoadOptions;'
       return:
         type:
-          - onenote.OneNote.Interfaces.PageCollectionLoadOptions
-  - uid: onenote.OneNote.Interfaces.SectionCollectionLoadOptions.parentSectionGroup
+          - 'onenote!OneNote.Interfaces.PageCollectionLoadOptions:interface'
+  - uid: 'onenote!OneNote.Interfaces.SectionCollectionLoadOptions#parentSectionGroup:member'
     summary: |-
-      对于集合中的每一项: 获取包含节的节组。 如果分区是笔记本的直接子级，则引发 ItemNotFound。
+      对于集合中的每一项：获取包含节的节组。 如果分区是笔记本的直接子级，则引发 ItemNotFound。
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: parentSectionGroup
     fullName: parentSectionGroup
     langs:
@@ -153,12 +153,12 @@ items:
       content: 'parentSectionGroup?: OneNote.Interfaces.SectionGroupLoadOptions;'
       return:
         type:
-          - onenote.OneNote.Interfaces.SectionGroupLoadOptions
-  - uid: onenote.OneNote.Interfaces.SectionCollectionLoadOptions.parentSectionGroupOrNull
+          - 'onenote!OneNote.Interfaces.SectionGroupLoadOptions:interface'
+  - uid: 'onenote!OneNote.Interfaces.SectionCollectionLoadOptions#parentSectionGroupOrNull:member'
     summary: |-
-      对于集合中的每一项: 获取包含节的节组。 如果分区是笔记本的直接子级，则返回 null。
+      对于集合中的每一项：获取包含节的节组。 如果分区是笔记本的直接子级，则返回 null。
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: parentSectionGroupOrNull
     fullName: parentSectionGroupOrNull
     langs:
@@ -168,12 +168,12 @@ items:
       content: 'parentSectionGroupOrNull?: OneNote.Interfaces.SectionGroupLoadOptions;'
       return:
         type:
-          - onenote.OneNote.Interfaces.SectionGroupLoadOptions
-  - uid: onenote.OneNote.Interfaces.SectionCollectionLoadOptions.webUrl
+          - 'onenote!OneNote.Interfaces.SectionGroupLoadOptions:interface'
+  - uid: 'onenote!OneNote.Interfaces.SectionCollectionLoadOptions#webUrl:member'
     summary: |-
-      对于集合中的每个项目: 页面的 web url。 只读
+      对于集合中的每个项目：页面的 web url。 只读
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: webUrl
     fullName: webUrl
     langs:
@@ -184,3 +184,10 @@ items:
       return:
         type:
           - boolean
+references:
+  - uid: 'onenote!OneNote.Interfaces.NotebookLoadOptions:interface'
+    name: OneNote.Interfaces.NotebookLoadOptions
+  - uid: 'onenote!OneNote.Interfaces.PageCollectionLoadOptions:interface'
+    name: OneNote.Interfaces.PageCollectionLoadOptions
+  - uid: 'onenote!OneNote.Interfaces.SectionGroupLoadOptions:interface'
+    name: OneNote.Interfaces.SectionGroupLoadOptions
