--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.sectiongroupdata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.sectiongroupdata.yml
@@ -1,24 +1,24 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: onenote.OneNote.Interfaces.SectionGroupData
-    summary: 描述通过调用 "sectionGroup ()" 返回的数据的接口。
+  - uid: 'onenote!OneNote.Interfaces.SectionGroupData:interface'
+    summary: 描述通过调用 "sectionGroup （）" 返回的数据的接口。
     name: OneNote.Interfaces.SectionGroupData
     fullName: OneNote.Interfaces.SectionGroupData
     langs:
       - typeScript
     type: interface
-    package: onenote
+    package: onenote!
     children:
-      - onenote.OneNote.Interfaces.SectionGroupData.clientUrl
-      - onenote.OneNote.Interfaces.SectionGroupData.id
-      - onenote.OneNote.Interfaces.SectionGroupData.name
-      - onenote.OneNote.Interfaces.SectionGroupData.sectionGroups
-      - onenote.OneNote.Interfaces.SectionGroupData.sections
-  - uid: onenote.OneNote.Interfaces.SectionGroupData.clientUrl
+      - 'onenote!OneNote.Interfaces.SectionGroupData#clientUrl:member'
+      - 'onenote!OneNote.Interfaces.SectionGroupData#id:member'
+      - 'onenote!OneNote.Interfaces.SectionGroupData#name:member'
+      - 'onenote!OneNote.Interfaces.SectionGroupData#sectionGroups:member'
+      - 'onenote!OneNote.Interfaces.SectionGroupData#sections:member'
+  - uid: 'onenote!OneNote.Interfaces.SectionGroupData#clientUrl:member'
     summary: |-
       分区组的客户端 url。 只读
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: clientUrl
     fullName: clientUrl
     langs:
@@ -29,11 +29,11 @@ items:
       return:
         type:
           - string
-  - uid: onenote.OneNote.Interfaces.SectionGroupData.id
+  - uid: 'onenote!OneNote.Interfaces.SectionGroupData#id:member'
     summary: |-
       获取分区组的 ID。 只读。
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -44,11 +44,11 @@ items:
       return:
         type:
           - string
-  - uid: onenote.OneNote.Interfaces.SectionGroupData.name
+  - uid: 'onenote!OneNote.Interfaces.SectionGroupData#name:member'
     summary: |-
       获取分区组的名称。 只读。
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -59,11 +59,11 @@ items:
       return:
         type:
           - string
-  - uid: onenote.OneNote.Interfaces.SectionGroupData.sectionGroups
+  - uid: 'onenote!OneNote.Interfaces.SectionGroupData#sectionGroups:member'
     summary: |-
       分区组中的分区组集合。 只读
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: sectionGroups
     fullName: sectionGroups
     langs:
@@ -73,12 +73,12 @@ items:
       content: 'sectionGroups?: OneNote.Interfaces.SectionGroupData[];'
       return:
         type:
-          - 'OneNote.Interfaces.SectionGroupData[]'
-  - uid: onenote.OneNote.Interfaces.SectionGroupData.sections
+          - 'onenote!OneNote.Interfaces.SectionGroupData#sectionGroups~0:complex'
+  - uid: 'onenote!OneNote.Interfaces.SectionGroupData#sections:member'
     summary: |-
       分区组中的分区集合。 只读
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: sections
     fullName: sections
     langs:
@@ -88,4 +88,23 @@ items:
       content: 'sections?: OneNote.Interfaces.SectionData[];'
       return:
         type:
-          - 'OneNote.Interfaces.SectionData[]'
+          - 'onenote!OneNote.Interfaces.SectionGroupData#sections~0:complex'
+references:
+  - uid: 'onenote!OneNote.Interfaces.SectionGroupData#sectionGroups~0:complex'
+    name: 'OneNote.Interfaces.SectionGroupData[]'
+    fullName: 'OneNote.Interfaces.SectionGroupData[]'
+    spec.typeScript:
+      - uid: 'onenote!OneNote.Interfaces.SectionGroupData:interface'
+        name: OneNote.Interfaces.SectionGroupData
+        fullName: OneNote.Interfaces.SectionGroupData
+      - name: '[]'
+        fullName: '[]'
+  - uid: 'onenote!OneNote.Interfaces.SectionGroupData#sections~0:complex'
+    name: 'OneNote.Interfaces.SectionData[]'
+    fullName: 'OneNote.Interfaces.SectionData[]'
+    spec.typeScript:
+      - uid: 'onenote!OneNote.Interfaces.SectionData:interface'
+        name: OneNote.Interfaces.SectionData
+        fullName: OneNote.Interfaces.SectionData
+      - name: '[]'
+        fullName: '[]'
