--- a/docs/docs-ref-autogen/onenote/onenote/onenote.outline.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.outline.yml
@@ -1,39 +1,39 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: onenote.OneNote.Outline
+  - uid: 'onenote!OneNote.Outline:class'
     summary: |-
       表示 Paragraph 对象的容器。
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: OneNote.Outline
     fullName: OneNote.Outline
     langs:
       - typeScript
     type: class
     extends:
-      - 'OfficeExtension.ClientObject '
-    package: onenote
+      - 'onenote!OfficeExtension.ClientObject:class'
+    package: onenote!
     children:
-      - onenote.OneNote.Outline.appendHtml
-      - onenote.OneNote.Outline.appendImage
-      - onenote.OneNote.Outline.appendRichText
-      - onenote.OneNote.Outline.appendTable
-      - onenote.OneNote.Outline.context
-      - onenote.OneNote.Outline.id
-      - onenote.OneNote.Outline.isTitle
-      - onenote.OneNote.Outline.load
-      - onenote.OneNote.Outline.load_1
-      - onenote.OneNote.Outline.load_2
-      - onenote.OneNote.Outline.pageContent
-      - onenote.OneNote.Outline.paragraphs
-      - onenote.OneNote.Outline.toJSON
-      - onenote.OneNote.Outline.track
-      - onenote.OneNote.Outline.untrack
-  - uid: onenote.OneNote.Outline.appendHtml
+      - 'onenote!OneNote.Outline#appendHtml:member(1)'
+      - 'onenote!OneNote.Outline#appendImage:member(1)'
+      - 'onenote!OneNote.Outline#appendRichText:member(1)'
+      - 'onenote!OneNote.Outline#appendTable:member(1)'
+      - 'onenote!OneNote.Outline#context:member'
+      - 'onenote!OneNote.Outline#id:member'
+      - 'onenote!OneNote.Outline#isTitle:member(1)'
+      - 'onenote!OneNote.Outline#load:member(1)'
+      - 'onenote!OneNote.Outline#load:member(2)'
+      - 'onenote!OneNote.Outline#load:member(3)'
+      - 'onenote!OneNote.Outline#pageContent:member'
+      - 'onenote!OneNote.Outline#paragraphs:member'
+      - 'onenote!OneNote.Outline#toJSON:member(1)'
+      - 'onenote!OneNote.Outline#track:member(1)'
+      - 'onenote!OneNote.Outline#untrack:member(1)'
+  - uid: 'onenote!OneNote.Outline#appendHtml:member(1)'
     summary: |-
       将指定的 HTML 添加到“边框”的底部。
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: appendHtml(html)
     fullName: appendHtml(html)
     langs:
@@ -89,11 +89,11 @@ items:
           description: '要追加的 HTML 字符串。 请参阅 OneNote 外接程序 JavaScript API[支持的 HTML](https://docs.microsoft.com/office/dev/add-ins/onenote/onenote-add-ins-page-content#supported-html) 。'
           type:
             - string
-  - uid: onenote.OneNote.Outline.appendImage
+  - uid: 'onenote!OneNote.Outline#appendImage:member(1)'
     summary: |-
       将指定的图像添加到“边框”的底部。
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: 'appendImage(base64EncodedImage, width, height)'
     fullName: 'appendImage(base64EncodedImage, width, height)'
     langs:
@@ -103,7 +103,7 @@ items:
       content: 'appendImage(base64EncodedImage: string, width: number, height: number): OneNote.Image;'
       return:
         type:
-          - onenote.OneNote.Image
+          - 'onenote!OneNote.Image:class'
         description: ''
       parameters:
         - id: base64EncodedImage
@@ -118,11 +118,11 @@ items:
           description: 可选。 以磅为单位的高度。 默认值为 null，将考虑图像高度。
           type:
             - number
-  - uid: onenote.OneNote.Outline.appendRichText
+  - uid: 'onenote!OneNote.Outline#appendRichText:member(1)'
     summary: |-
       将指定的文本添加到“边框”的底部。
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: appendRichText(paragraphText)
     fullName: appendRichText(paragraphText)
     langs:
@@ -132,18 +132,18 @@ items:
       content: 'appendRichText(paragraphText: string): OneNote.RichText;'
       return:
         type:
-          - onenote.OneNote.RichText
+          - 'onenote!OneNote.RichText:class'
         description: ''
       parameters:
         - id: paragraphText
           description: 要追加的 HTML 字符串。
           type:
             - string
-  - uid: onenote.OneNote.Outline.appendTable
+  - uid: 'onenote!OneNote.Outline#appendTable:member(1)'
     summary: |-
       将具有指定行数和列数的表格添加到边框的底部。
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: 'appendTable(rowCount, columnCount, values)'
     fullName: 'appendTable(rowCount, columnCount, values)'
     langs:
@@ -153,7 +153,7 @@ items:
       content: 'appendTable(rowCount: number, columnCount: number, values?: string[][]): OneNote.Table;'
       return:
         type:
-          - onenote.OneNote.Table
+          - 'onenote!OneNote.Table:class'
         description: |-
 
 
@@ -206,7 +206,7 @@ items:
           description: 可选的二维数组。 如果指定数组中的对应字符串，则填充单元格。
           type:
             - 'string[][]'
-  - uid: onenote.OneNote.Outline.context
+  - uid: 'onenote!OneNote.Outline#context:member'
     summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
@@ -217,12 +217,12 @@ items:
       content: 'context: RequestContext;'
       return:
         type:
-          - onenote.OneNote.RequestContext
-  - uid: onenote.OneNote.Outline.id
+          - 'onenote!OneNote.RequestContext:class'
+  - uid: 'onenote!OneNote.Outline#id:member'
     summary: |-
       获取边框对象的 ID。 只读。
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -233,11 +233,11 @@ items:
       return:
         type:
           - string
-  - uid: onenote.OneNote.Outline.isTitle
+  - uid: 'onenote!OneNote.Outline#isTitle:member(1)'
     summary: |-
       检查大纲是否为标题大纲。
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: isTitle()
     fullName: isTitle()
     langs:
@@ -247,18 +247,18 @@ items:
       content: 'isTitle(): OfficeExtension.ClientResult<boolean>;'
       return:
         type:
-          - OfficeExtension.ClientResult<boolean>
+          - 'onenote!OneNote.Outline#isTitle~0:complex'
         description: ''
-  - uid: onenote.OneNote.Outline.load
+  - uid: 'onenote!OneNote.Outline#load:member(1)'
     summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
     remarks: |-
-      除了此签名之外, 此方法还具有以下签名:
+      除了此签名之外，此方法还具有以下签名：
 
-      `load(option?: string | string[]): OneNote.Outline`-Where 选项是一个逗号分隔的字符串或一个字符串数组, 用于指定要加载的属性。
+      `load(option?: string | string[]): OneNote.Outline`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
 
-      `load(option?: { select?: string; expand?: string; }): OneNote.Outline`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。
+      `load(option?: { select?: string; expand?: string; }): OneNote.Outline`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
 
-      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): OneNote.Outline`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): OneNote.Outline`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
     name: load(option)
     fullName: load(option)
     langs:
@@ -268,15 +268,15 @@ items:
       content: 'load(option?: OneNote.Interfaces.OutlineLoadOptions): OneNote.Outline;'
       return:
         type:
-          - onenote.OneNote.Outline
+          - 'onenote!OneNote.Outline:class'
         description: ''
       parameters:
         - id: option
           description: ''
           type:
-            - onenote.OneNote.Interfaces.OutlineLoadOptions
-  - uid: onenote.OneNote.Outline.load_1
-    summary: '将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。'
+            - 'onenote!OneNote.Interfaces.OutlineLoadOptions:interface'
+  - uid: 'onenote!OneNote.Outline#load:member(2)'
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -286,15 +286,15 @@ items:
       content: 'load(propertyNames?: string | string[]): OneNote.Outline;'
       return:
         type:
-          - onenote.OneNote.Outline
+          - 'onenote!OneNote.Outline:class'
         description: ''
       parameters:
         - id: propertyNames
-          description: '一个以逗号分隔的字符串或字符串数组, 用于指定要加载的属性。'
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
-  - uid: onenote.OneNote.Outline.load_2
-    summary: '将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。'
+  - uid: 'onenote!OneNote.Outline#load:member(3)'
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -304,18 +304,18 @@ items:
       content: 'load(propertyNamesAndPaths?: { select?: string; expand?: string; }): OneNote.Outline;'
       return:
         type:
-          - onenote.OneNote.Outline
+          - 'onenote!OneNote.Outline:class'
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '其中, propertyNamesAndPaths 是用逗号分隔的字符串, 用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串, 用于指定要加载的导航属性。'
+          description: 其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。
           type:
             - '{ select?: string; expand?: string; }'
-  - uid: onenote.OneNote.Outline.pageContent
+  - uid: 'onenote!OneNote.Outline#pageContent:member'
     summary: |-
       获取包含边框的 PageContent 对象。 此对象定义页面上 Outline 的位置。 只读。
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: pageContent
     fullName: pageContent
     langs:
@@ -325,12 +325,12 @@ items:
       content: 'readonly pageContent: OneNote.PageContent;'
       return:
         type:
-          - onenote.OneNote.PageContent
-  - uid: onenote.OneNote.Outline.paragraphs
+          - 'onenote!OneNote.PageContent:class'
+  - uid: 'onenote!OneNote.Outline#paragraphs:member'
     summary: |-
       获取“边框”中 Paragraph 对象的集合。 只读。
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: paragraphs
     fullName: paragraphs
     langs:
@@ -340,9 +340,9 @@ items:
       content: 'readonly paragraphs: OneNote.ParagraphCollection;'
       return:
         type:
-          - onenote.OneNote.ParagraphCollection
-  - uid: onenote.OneNote.Outline.toJSON
-    summary: '重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始的 OneNote 对象是 API 对象, 但`toJSON`方法返回一个无格式的 JavaScript 对象 (类型为`OneNote.Interfaces.OutlineData`<!-- -->), 其中包含原始对象中所有已加载的子属性的浅表副本。'
+          - 'onenote!OneNote.ParagraphCollection:class'
+  - uid: 'onenote!OneNote.Outline#toJSON:member(1)'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始的 OneNote 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`OneNote.Interfaces.OutlineData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -352,9 +352,9 @@ items:
       content: 'toJSON(): OneNote.Interfaces.OutlineData;'
       return:
         type:
-          - onenote.OneNote.Interfaces.OutlineData
+          - 'onenote!OneNote.Interfaces.OutlineData:interface'
         description: ''
-  - uid: onenote.OneNote.Outline.track
+  - uid: 'onenote!OneNote.Outline#track:member(1)'
     summary: 根据文档中的相应更改来跟踪对象，以便进行自动调整。 此调用是 context.trackedObjects.add(thisObject) 的缩写。 如果你在“.sync”调用之间和按顺序执行“.run”批处理之外使用此对象，并且在对象上设置属性或调用方法时出现“InvalidObjectPath”错误，则需要在首次创建对象时为跟踪的对象集合添加对象。
     name: track()
     fullName: track()
@@ -365,9 +365,9 @@ items:
       content: 'track(): OneNote.Outline;'
       return:
         type:
-          - onenote.OneNote.Outline
+          - 'onenote!OneNote.Outline:class'
         description: ''
-  - uid: onenote.OneNote.Outline.untrack
+  - uid: 'onenote!OneNote.Outline#untrack:member(1)'
     summary: 释放与此对象关联的内存（如果先前已跟踪过）。 此调用是 context.trackedObjects.add(thisObject) 的缩写。 拥有许多跟踪对象会降低主机应用程序的速度，因此请在使用完毕后释放所添加的任何对象。 在内存释放生效之前，你需要调用“context.sync()”。
     name: untrack()
     fullName: untrack()
@@ -378,5 +378,35 @@ items:
       content: 'untrack(): OneNote.Outline;'
       return:
         type:
-          - onenote.OneNote.Outline
+          - 'onenote!OneNote.Outline:class'
         description: ''
+references:
+  - uid: 'onenote!OfficeExtension.ClientObject:class'
+    name: OfficeExtension.ClientObject
+  - uid: 'onenote!OneNote.Image:class'
+    name: OneNote.Image
+  - uid: 'onenote!OneNote.RichText:class'
+    name: OneNote.RichText
+  - uid: 'onenote!OneNote.Table:class'
+    name: OneNote.Table
+  - uid: 'onenote!OneNote.RequestContext:class'
+    name: RequestContext
+  - uid: 'onenote!OneNote.Outline#isTitle~0:complex'
+    name: OfficeExtension.ClientResult<boolean>
+    fullName: OfficeExtension.ClientResult<boolean>
+    spec.typeScript:
+      - uid: 'onenote!OfficeExtension.ClientResult:class'
+        name: OfficeExtension.ClientResult
+        fullName: OfficeExtension.ClientResult
+      - name: <boolean>
+        fullName: <boolean>
+  - uid: 'onenote!OneNote.Outline:class'
+    name: OneNote.Outline
+  - uid: 'onenote!OneNote.Interfaces.OutlineLoadOptions:interface'
+    name: OneNote.Interfaces.OutlineLoadOptions
+  - uid: 'onenote!OneNote.PageContent:class'
+    name: OneNote.PageContent
+  - uid: 'onenote!OneNote.ParagraphCollection:class'
+    name: OneNote.ParagraphCollection
+  - uid: 'onenote!OneNote.Interfaces.OutlineData:interface'
+    name: OneNote.Interfaces.OutlineData
