--- a/docs/docs-ref-autogen/outlook/outlook/office.organizer.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.organizer.yml
@@ -1,32 +1,32 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: outlook.Office.Organizer
+  - uid: 'outlook!Office.Organizer:interface'
     summary: |-
-      表示约会组织者, 即使用于创建约会的别名或委托也是如此。 此对象提供用于在 Outlook 外接程序中获取约会的组织者值的方法。
+      表示约会组织者，即使用于创建约会的别名或委托也是如此。 此对象提供用于在 Outlook 外接程序中获取约会的组织者值的方法。
 
-      \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+      \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem
+      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**： ReadItem
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写
+      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**：撰写
     name: Office.Organizer
     fullName: Office.Organizer
     langs:
       - typeScript
     type: interface
-    package: outlook
+    package: outlook!
     children:
-      - outlook.Office.Organizer.getAsync
-      - outlook.Office.Organizer.getAsync_1
-  - uid: outlook.Office.Organizer.getAsync
+      - 'outlook!Office.Organizer#getAsync:member(1)'
+      - 'outlook!Office.Organizer#getAsync:member(2)'
+  - uid: 'outlook!Office.Organizer#getAsync:member(1)'
     summary: |-
-      将约会的组织者值获取为 asyncResult 属性中的[EmailAddressDetails](xref:outlook.Office.EmailAddressDetails) 。
+      将约会的组织者值获取为 asyncResult 属性中的[EmailAddressDetails](xref:outlook!Office.EmailAddressDetails:interface) 。
 
-      \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+      \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem
+      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**： ReadItem
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写
+      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**：撰写
     name: 'getAsync(options, callback)'
     fullName: 'getAsync(options, callback)'
     langs:
@@ -40,22 +40,22 @@ items:
         description: ''
       parameters:
         - id: options
-          description: '包含一个或多个以下属性的对象文本。 asyncContext: 开发人员可以在回调方法中提供要访问的任何对象。'
+          description: 包含一个或多个以下属性的对象文本。 asyncContext：开发人员可以在回调方法中提供要访问的任何对象。
           type:
-            - Office.AsyncContextOptions
+            - 'outlook!Office.AsyncContextOptions:interface'
         - id: callback
-          description: '方法完成后, 使用单个参数 asyncResult 调用在 callback 参数中传递的函数, 该参数为 AsyncResult 对象。 结果`value`的属性是约会的组织者值, 作为 EmailAddressDetails 对象。'
+          description: 方法完成后，使用单个参数 asyncResult 调用在 callback 参数中传递的函数，该参数为 AsyncResult 对象。 结果`value`的属性是约会的组织者值，作为 EmailAddressDetails 对象。
           type:
-            - '(asyncResult: Office.AsyncResult<EmailAddressDetails>) => void'
-  - uid: outlook.Office.Organizer.getAsync_1
+            - 'outlook!Office.Organizer#getAsync~0:complex'
+  - uid: 'outlook!Office.Organizer#getAsync:member(2)'
     summary: |-
-      将约会的组织者值获取为 asyncResult 属性中的[EmailAddressDetails](xref:outlook.Office.EmailAddressDetails) 。
+      将约会的组织者值获取为 asyncResult 属性中的[EmailAddressDetails](xref:outlook!Office.EmailAddressDetails:interface) 。
 
-      \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+      \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem
+      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**： ReadItem
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写
+      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**：撰写
 
       #### <a name="examples"></a>示例
 
@@ -79,6 +79,41 @@ items:
         description: ''
       parameters:
         - id: callback
-          description: '方法完成后, 使用单个参数 asyncResult 调用在 callback 参数中传递的函数, 该参数为 AsyncResult 对象。 结果`value`的属性是约会的组织者值, 作为 EmailAddressDetails 对象。'
+          description: 方法完成后，使用单个参数 asyncResult 调用在 callback 参数中传递的函数，该参数为 AsyncResult 对象。 结果`value`的属性是约会的组织者值，作为 EmailAddressDetails 对象。
           type:
-            - '(asyncResult: Office.AsyncResult<EmailAddressDetails>) => void'
+            - 'outlook!Office.Organizer#getAsync~1:complex'
+references:
+  - uid: 'outlook!Office.AsyncContextOptions:interface'
+    name: Office.AsyncContextOptions
+  - uid: 'outlook!Office.Organizer#getAsync~0:complex'
+    name: '(asyncResult: Office.AsyncResult<EmailAddressDetails>) => void'
+    fullName: '(asyncResult: Office.AsyncResult<Office.EmailAddressDetails>) => void'
+    spec.typeScript:
+      - name: '(asyncResult: '
+        fullName: '(asyncResult: '
+      - uid: 'outlook!Office.AsyncResult:interface'
+        name: Office.AsyncResult
+        fullName: Office.AsyncResult
+      - name: <
+        fullName: <
+      - uid: 'outlook!Office.EmailAddressDetails:interface'
+        name: EmailAddressDetails
+        fullName: Office.EmailAddressDetails
+      - name: '>) => void'
+        fullName: '>) => void'
+  - uid: 'outlook!Office.Organizer#getAsync~1:complex'
+    name: '(asyncResult: Office.AsyncResult<EmailAddressDetails>) => void'
+    fullName: '(asyncResult: Office.AsyncResult<Office.EmailAddressDetails>) => void'
+    spec.typeScript:
+      - name: '(asyncResult: '
+        fullName: '(asyncResult: '
+      - uid: 'outlook!Office.AsyncResult:interface'
+        name: Office.AsyncResult
+        fullName: Office.AsyncResult
+      - name: <
+        fullName: <
+      - uid: 'outlook!Office.EmailAddressDetails:interface'
+        name: EmailAddressDetails
+        fullName: Office.EmailAddressDetails
+      - name: '>) => void'
+        fullName: '>) => void'
