--- a/docs/docs-ref-autogen/visio/visio/visio.shapecollection.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.shapecollection.yml
@@ -1,28 +1,28 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: visio.Visio.ShapeCollection
+  - uid: 'visio!Visio.ShapeCollection:class'
     summary: |-
       表示 Shape 集合。
 
-      \[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: Visio.ShapeCollection
     fullName: Visio.ShapeCollection
     langs:
       - typeScript
     type: class
     extends:
-      - 'OfficeExtension.ClientObject '
-    package: visio
+      - 'visio!OfficeExtension.ClientObject:class'
+    package: visio!
     children:
-      - visio.Visio.ShapeCollection.context
-      - visio.Visio.ShapeCollection.getCount
-      - visio.Visio.ShapeCollection.getItem
-      - visio.Visio.ShapeCollection.items
-      - visio.Visio.ShapeCollection.load
-      - visio.Visio.ShapeCollection.load_1
-      - visio.Visio.ShapeCollection.load_2
-      - visio.Visio.ShapeCollection.toJSON
-  - uid: visio.Visio.ShapeCollection.context
+      - 'visio!Visio.ShapeCollection#context:member'
+      - 'visio!Visio.ShapeCollection#getCount:member(1)'
+      - 'visio!Visio.ShapeCollection#getItem:member(1)'
+      - 'visio!Visio.ShapeCollection#items:member'
+      - 'visio!Visio.ShapeCollection#load:member(1)'
+      - 'visio!Visio.ShapeCollection#load:member(2)'
+      - 'visio!Visio.ShapeCollection#load:member(3)'
+      - 'visio!Visio.ShapeCollection#toJSON:member(1)'
+  - uid: 'visio!Visio.ShapeCollection#context:member'
     summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
@@ -33,12 +33,12 @@ items:
       content: 'context: RequestContext;'
       return:
         type:
-          - visio.Visio.RequestContext
-  - uid: visio.Visio.ShapeCollection.getCount
+          - 'visio!Visio.RequestContext:class'
+  - uid: 'visio!Visio.ShapeCollection#getCount:member(1)'
     summary: |-
       获取集合中的形状数量。
 
-      \[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: getCount()
     fullName: getCount()
     langs:
@@ -48,7 +48,7 @@ items:
       content: 'getCount(): OfficeExtension.ClientResult<number>;'
       return:
         type:
-          - OfficeExtension.ClientResult<number>
+          - 'visio!Visio.ShapeCollection#getCount~0:complex'
         description: |-
 
 
@@ -68,11 +68,11 @@ items:
               }
           });
           ```
-  - uid: visio.Visio.ShapeCollection.getItem
+  - uid: 'visio!Visio.ShapeCollection#getItem:member(1)'
     summary: |-
       按键（名称或索引）获取形状。
 
-      \[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: getItem(key)
     fullName: getItem(key)
     langs:
@@ -82,14 +82,14 @@ items:
       content: 'getItem(key: number | string): Visio.Shape;'
       return:
         type:
-          - visio.Visio.Shape
+          - 'visio!Visio.Shape:class'
         description: ''
       parameters:
         - id: key
           description: 键是要检索的形状的名称或索引。
           type:
             - number | string
-  - uid: visio.Visio.ShapeCollection.items
+  - uid: 'visio!Visio.ShapeCollection#items:member'
     summary: 获取此集合中已加载的子项。
     name: items
     fullName: items
@@ -100,17 +100,17 @@ items:
       content: 'readonly items: Visio.Shape[];'
       return:
         type:
-          - 'Visio.Shape[]'
-  - uid: visio.Visio.ShapeCollection.load
+          - 'visio!Visio.ShapeCollection#items~0:complex'
+  - uid: 'visio!Visio.ShapeCollection#load:member(1)'
     summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
     remarks: |-
-      除了此签名之外, 此方法还具有以下签名:
+      除了此签名之外，此方法还具有以下签名：
 
-      `load(option?: string | string[]): Visio.ShapeCollection`-Where 选项是一个逗号分隔的字符串或一个字符串数组, 用于指定要加载的属性。
+      `load(option?: string | string[]): Visio.ShapeCollection`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
 
-      `load(option?: { select?: string; expand?: string; }): Visio.ShapeCollection`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。
+      `load(option?: { select?: string; expand?: string; }): Visio.ShapeCollection`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
 
-      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.ShapeCollection`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.ShapeCollection`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
     name: load(option)
     fullName: load(option)
     langs:
@@ -120,15 +120,15 @@ items:
       content: 'load(option?: Visio.Interfaces.ShapeCollectionLoadOptions & Visio.Interfaces.CollectionLoadOptions): Visio.ShapeCollection;'
       return:
         type:
-          - visio.Visio.ShapeCollection
+          - 'visio!Visio.ShapeCollection:class'
         description: ''
       parameters:
         - id: option
           description: ''
           type:
-            - Visio.Interfaces.ShapeCollectionLoadOptions & Visio.Interfaces.CollectionLoadOptions
-  - uid: visio.Visio.ShapeCollection.load_1
-    summary: '将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。'
+            - 'visio!Visio.ShapeCollection#load~0:complex'
+  - uid: 'visio!Visio.ShapeCollection#load:member(2)'
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -138,14 +138,14 @@ items:
       content: 'load(propertyNames?: string | string[]): Visio.ShapeCollection;'
       return:
         type:
-          - visio.Visio.ShapeCollection
+          - 'visio!Visio.ShapeCollection:class'
         description: ''
       parameters:
         - id: propertyNames
-          description: '一个以逗号分隔的字符串或字符串数组, 用于指定要加载的属性。'
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
-  - uid: visio.Visio.ShapeCollection.load_2
+  - uid: 'visio!Visio.ShapeCollection#load:member(3)'
     name: load(option)
     fullName: load(option)
     langs:
@@ -155,15 +155,15 @@ items:
       content: 'load(option?: OfficeExtension.LoadOption): Visio.ShapeCollection;'
       return:
         type:
-          - visio.Visio.ShapeCollection
+          - 'visio!Visio.ShapeCollection:class'
         description: ''
       parameters:
         - id: option
           description: ''
           type:
-            - OfficeExtension.LoadOption
-  - uid: visio.Visio.ShapeCollection.toJSON
-    summary: '重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始`Visio.ShapeCollection`对象是 API 对象, 但`toJSON`方法返回一个无格式的 JavaScript 对象 (类型为`Visio.Interfaces.ShapeCollectionData`<!-- -->), 其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。'
+            - 'visio!OfficeExtension.LoadOption:interface'
+  - uid: 'visio!Visio.ShapeCollection#toJSON:member(1)'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Visio.ShapeCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Visio.Interfaces.ShapeCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -173,5 +173,48 @@ items:
       content: 'toJSON(): Visio.Interfaces.ShapeCollectionData;'
       return:
         type:
-          - visio.Visio.Interfaces.ShapeCollectionData
+          - 'visio!Visio.Interfaces.ShapeCollectionData:interface'
         description: ''
+references:
+  - uid: 'visio!OfficeExtension.ClientObject:class'
+    name: OfficeExtension.ClientObject
+  - uid: 'visio!Visio.RequestContext:class'
+    name: RequestContext
+  - uid: 'visio!Visio.ShapeCollection#getCount~0:complex'
+    name: OfficeExtension.ClientResult<number>
+    fullName: OfficeExtension.ClientResult<number>
+    spec.typeScript:
+      - uid: 'visio!OfficeExtension.ClientResult:class'
+        name: OfficeExtension.ClientResult
+        fullName: OfficeExtension.ClientResult
+      - name: <number>
+        fullName: <number>
+  - uid: 'visio!Visio.Shape:class'
+    name: Visio.Shape
+  - uid: 'visio!Visio.ShapeCollection#items~0:complex'
+    name: 'Visio.Shape[]'
+    fullName: 'Visio.Shape[]'
+    spec.typeScript:
+      - uid: 'visio!Visio.Shape:class'
+        name: Visio.Shape
+        fullName: Visio.Shape
+      - name: '[]'
+        fullName: '[]'
+  - uid: 'visio!Visio.ShapeCollection:class'
+    name: Visio.ShapeCollection
+  - uid: 'visio!Visio.ShapeCollection#load~0:complex'
+    name: Visio.Interfaces.ShapeCollectionLoadOptions & Visio.Interfaces.CollectionLoadOptions
+    fullName: Visio.Interfaces.ShapeCollectionLoadOptions & Visio.Interfaces.CollectionLoadOptions
+    spec.typeScript:
+      - uid: 'visio!Visio.Interfaces.ShapeCollectionLoadOptions:interface'
+        name: Visio.Interfaces.ShapeCollectionLoadOptions
+        fullName: Visio.Interfaces.ShapeCollectionLoadOptions
+      - name: ' & '
+        fullName: ' & '
+      - uid: 'visio!Visio.Interfaces.CollectionLoadOptions:interface'
+        name: Visio.Interfaces.CollectionLoadOptions
+        fullName: Visio.Interfaces.CollectionLoadOptions
+  - uid: 'visio!OfficeExtension.LoadOption:interface'
+    name: OfficeExtension.LoadOption
+  - uid: 'visio!Visio.Interfaces.ShapeCollectionData:interface'
+    name: Visio.Interfaces.ShapeCollectionData
