--- a/docs/docs-ref-autogen/word/word/word.interfaces.documentcreateddata.yml
+++ b/docs/docs-ref-autogen/word/word/word.interfaces.documentcreateddata.yml
@@ -1,26 +1,27 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: word.Word.Interfaces.DocumentCreatedData
-    summary: 描述通过调用 "documentCreated ()" 返回的数据的接口。
+  - uid: 'word!Word.Interfaces.DocumentCreatedData:interface'
+    summary: 描述通过调用 "documentCreated （）" 返回的数据的接口。
     name: Word.Interfaces.DocumentCreatedData
     fullName: Word.Interfaces.DocumentCreatedData
     langs:
       - typeScript
     type: interface
-    package: word
+    package: word!
     children:
-      - word.Word.Interfaces.DocumentCreatedData.body
-      - word.Word.Interfaces.DocumentCreatedData.contentControls
-      - word.Word.Interfaces.DocumentCreatedData.customXmlParts
-      - word.Word.Interfaces.DocumentCreatedData.properties
-      - word.Word.Interfaces.DocumentCreatedData.saved
-      - word.Word.Interfaces.DocumentCreatedData.sections
-      - word.Word.Interfaces.DocumentCreatedData.settings
-  - uid: word.Word.Interfaces.DocumentCreatedData.body
+      - 'word!Word.Interfaces.DocumentCreatedData#body:member'
+      - 'word!Word.Interfaces.DocumentCreatedData#contentControls:member'
+      - 'word!Word.Interfaces.DocumentCreatedData#customXmlParts:member'
+      - 'word!Word.Interfaces.DocumentCreatedData#properties:member'
+      - 'word!Word.Interfaces.DocumentCreatedData#saved:member'
+      - 'word!Word.Interfaces.DocumentCreatedData#sections:member'
+      - 'word!Word.Interfaces.DocumentCreatedData#settings:member'
+  - uid: 'word!Word.Interfaces.DocumentCreatedData#body:member'
     summary: |-
       获取文档的正文对象。 正文是不包括标头、页脚、脚注、文本框等的文本。 只读。
 
-      \[[API 集: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    isPreview: true
     name: body
     fullName: body
     langs:
@@ -30,12 +31,13 @@ items:
       content: 'body?: Word.Interfaces.BodyData;'
       return:
         type:
-          - word.Word.Interfaces.BodyData
-  - uid: word.Word.Interfaces.DocumentCreatedData.contentControls
+          - 'word!Word.Interfaces.BodyData:interface'
+  - uid: 'word!Word.Interfaces.DocumentCreatedData#contentControls:member'
     summary: |-
       获取文档中的内容控件对象的集合。 这包括文档正文、标头、页脚、文本框等中的内容控件。 只读。
 
-      \[[API 集: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    isPreview: true
     name: contentControls
     fullName: contentControls
     langs:
@@ -45,12 +47,12 @@ items:
       content: 'contentControls?: Word.Interfaces.ContentControlData[];'
       return:
         type:
-          - 'Word.Interfaces.ContentControlData[]'
-  - uid: word.Word.Interfaces.DocumentCreatedData.customXmlParts
+          - 'word!Word.Interfaces.DocumentCreatedData#contentControls~0:complex'
+  - uid: 'word!Word.Interfaces.DocumentCreatedData#customXmlParts:member'
     summary: |-
       获取文档中的自定义 XML 部件。 只读。
 
-      \[[API 集: WordApiHiddenDocument 1.4](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApiHiddenDocument 1.4](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     isPreview: true
     name: customXmlParts
     fullName: customXmlParts
@@ -61,12 +63,13 @@ items:
       content: 'customXmlParts?: Word.Interfaces.CustomXmlPartData[];'
       return:
         type:
-          - 'Word.Interfaces.CustomXmlPartData[]'
-  - uid: word.Word.Interfaces.DocumentCreatedData.properties
+          - 'word!Word.Interfaces.DocumentCreatedData#customXmlParts~0:complex'
+  - uid: 'word!Word.Interfaces.DocumentCreatedData#properties:member'
     summary: |-
       获取文档的属性。 只读。
 
-      \[[API 集: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    isPreview: true
     name: properties
     fullName: properties
     langs:
@@ -76,12 +79,13 @@ items:
       content: 'properties?: Word.Interfaces.DocumentPropertiesData;'
       return:
         type:
-          - word.Word.Interfaces.DocumentPropertiesData
-  - uid: word.Word.Interfaces.DocumentCreatedData.saved
+          - 'word!Word.Interfaces.DocumentPropertiesData:interface'
+  - uid: 'word!Word.Interfaces.DocumentCreatedData#saved:member'
     summary: |-
       指示是否已保存在文档中所做的更改。如果值为 true，表示文档自上次保存以来并未更改。只读。
 
-      \[[API 集: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    isPreview: true
     name: saved
     fullName: saved
     langs:
@@ -92,11 +96,12 @@ items:
       return:
         type:
           - boolean
-  - uid: word.Word.Interfaces.DocumentCreatedData.sections
+  - uid: 'word!Word.Interfaces.DocumentCreatedData#sections:member'
     summary: |-
       获取文档中的节对象的集合。 只读。
 
-      \[[API 集: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    isPreview: true
     name: sections
     fullName: sections
     langs:
@@ -106,12 +111,12 @@ items:
       content: 'sections?: Word.Interfaces.SectionData[];'
       return:
         type:
-          - 'Word.Interfaces.SectionData[]'
-  - uid: word.Word.Interfaces.DocumentCreatedData.settings
+          - 'word!Word.Interfaces.DocumentCreatedData#sections~0:complex'
+  - uid: 'word!Word.Interfaces.DocumentCreatedData#settings:member'
     summary: |-
       获取文档中的加载项设置。 只读。
 
-      \[[API 集: WordApiHiddenDocument 1.4](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApiHiddenDocument 1.4](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     isPreview: true
     name: settings
     fullName: settings
@@ -122,4 +127,45 @@ items:
       content: 'settings?: Word.Interfaces.SettingData[];'
       return:
         type:
-          - 'Word.Interfaces.SettingData[]'
+          - 'word!Word.Interfaces.DocumentCreatedData#settings~0:complex'
+references:
+  - uid: 'word!Word.Interfaces.BodyData:interface'
+    name: Word.Interfaces.BodyData
+  - uid: 'word!Word.Interfaces.DocumentCreatedData#contentControls~0:complex'
+    name: 'Word.Interfaces.ContentControlData[]'
+    fullName: 'Word.Interfaces.ContentControlData[]'
+    spec.typeScript:
+      - uid: 'word!Word.Interfaces.ContentControlData:interface'
+        name: Word.Interfaces.ContentControlData
+        fullName: Word.Interfaces.ContentControlData
+      - name: '[]'
+        fullName: '[]'
+  - uid: 'word!Word.Interfaces.DocumentCreatedData#customXmlParts~0:complex'
+    name: 'Word.Interfaces.CustomXmlPartData[]'
+    fullName: 'Word.Interfaces.CustomXmlPartData[]'
+    spec.typeScript:
+      - uid: 'word!Word.Interfaces.CustomXmlPartData:interface'
+        name: Word.Interfaces.CustomXmlPartData
+        fullName: Word.Interfaces.CustomXmlPartData
+      - name: '[]'
+        fullName: '[]'
+  - uid: 'word!Word.Interfaces.DocumentPropertiesData:interface'
+    name: Word.Interfaces.DocumentPropertiesData
+  - uid: 'word!Word.Interfaces.DocumentCreatedData#sections~0:complex'
+    name: 'Word.Interfaces.SectionData[]'
+    fullName: 'Word.Interfaces.SectionData[]'
+    spec.typeScript:
+      - uid: 'word!Word.Interfaces.SectionData:interface'
+        name: Word.Interfaces.SectionData
+        fullName: Word.Interfaces.SectionData
+      - name: '[]'
+        fullName: '[]'
+  - uid: 'word!Word.Interfaces.DocumentCreatedData#settings~0:complex'
+    name: 'Word.Interfaces.SettingData[]'
+    fullName: 'Word.Interfaces.SettingData[]'
+    spec.typeScript:
+      - uid: 'word!Word.Interfaces.SettingData:interface'
+        name: Word.Interfaces.SettingData
+        fullName: Word.Interfaces.SettingData
+      - name: '[]'
+        fullName: '[]'
