--- a/docs/docs-ref-autogen/word/word/word.interfaces.listdata.yml
+++ b/docs/docs-ref-autogen/word/word/word.interfaces.listdata.yml
@@ -1,23 +1,23 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: word.Word.Interfaces.ListData
-    summary: 描述通过调用 "toJSON ()" 返回的数据的接口。
+  - uid: 'word!Word.Interfaces.ListData:interface'
+    summary: 描述通过调用 "toJSON （）" 返回的数据的接口。
     name: Word.Interfaces.ListData
     fullName: Word.Interfaces.ListData
     langs:
       - typeScript
     type: interface
-    package: word
+    package: word!
     children:
-      - word.Word.Interfaces.ListData.id
-      - word.Word.Interfaces.ListData.levelExistences
-      - word.Word.Interfaces.ListData.levelTypes
-      - word.Word.Interfaces.ListData.paragraphs
-  - uid: word.Word.Interfaces.ListData.id
+      - 'word!Word.Interfaces.ListData#id:member'
+      - 'word!Word.Interfaces.ListData#levelExistences:member'
+      - 'word!Word.Interfaces.ListData#levelTypes:member'
+      - 'word!Word.Interfaces.ListData#paragraphs:member'
+  - uid: 'word!Word.Interfaces.ListData#id:member'
     summary: |-
       获取列表的 id。
 
-      \[[API 集: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -28,11 +28,11 @@ items:
       return:
         type:
           - number
-  - uid: word.Word.Interfaces.ListData.levelExistences
+  - uid: 'word!Word.Interfaces.ListData#levelExistences:member'
     summary: |-
       检查 list 中是否包含所有 9 个级别。值为 true 表示级别存在，即各个级别至少存在一个列表项。只读。
 
-      \[[API 集: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: levelExistences
     fullName: levelExistences
     langs:
@@ -43,11 +43,11 @@ items:
       return:
         type:
           - 'boolean[]'
-  - uid: word.Word.Interfaces.ListData.levelTypes
+  - uid: 'word!Word.Interfaces.ListData#levelTypes:member'
     summary: |-
       获取 list 中的所有 9 个级别类型。 每种类型可以是 "项目符号"、"数字" 或 "图片"。 只读。
 
-      \[[API 集: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: levelTypes
     fullName: levelTypes
     langs:
@@ -57,12 +57,12 @@ items:
       content: 'levelTypes?: Word.ListLevelType[];'
       return:
         type:
-          - 'Word.ListLevelType[]'
-  - uid: word.Word.Interfaces.ListData.paragraphs
+          - 'word!Word.Interfaces.ListData#levelTypes~0:complex'
+  - uid: 'word!Word.Interfaces.ListData#paragraphs:member'
     summary: |-
       获取 list 中的段落。 只读。
 
-      \[[API 集: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: paragraphs
     fullName: paragraphs
     langs:
@@ -72,4 +72,23 @@ items:
       content: 'paragraphs?: Word.Interfaces.ParagraphData[];'
       return:
         type:
-          - 'Word.Interfaces.ParagraphData[]'
+          - 'word!Word.Interfaces.ListData#paragraphs~0:complex'
+references:
+  - uid: 'word!Word.Interfaces.ListData#levelTypes~0:complex'
+    name: 'Word.ListLevelType[]'
+    fullName: 'Word.ListLevelType[]'
+    spec.typeScript:
+      - uid: 'word!Word.ListLevelType:enum'
+        name: Word.ListLevelType
+        fullName: Word.ListLevelType
+      - name: '[]'
+        fullName: '[]'
+  - uid: 'word!Word.Interfaces.ListData#paragraphs~0:complex'
+    name: 'Word.Interfaces.ParagraphData[]'
+    fullName: 'Word.Interfaces.ParagraphData[]'
+    spec.typeScript:
+      - uid: 'word!Word.Interfaces.ParagraphData:interface'
+        name: Word.Interfaces.ParagraphData
+        fullName: Word.Interfaces.ParagraphData
+      - name: '[]'
+        fullName: '[]'
