--- a/docs/docs-ref-autogen/word/word/word.interfaces.tableborderdata.yml
+++ b/docs/docs-ref-autogen/word/word/word.interfaces.tableborderdata.yml
@@ -1,22 +1,22 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: word.Word.Interfaces.TableBorderData
-    summary: 描述通过调用 "tableBorder ()" 返回的数据的接口。
+  - uid: 'word!Word.Interfaces.TableBorderData:interface'
+    summary: 描述通过调用 "tableBorder （）" 返回的数据的接口。
     name: Word.Interfaces.TableBorderData
     fullName: Word.Interfaces.TableBorderData
     langs:
       - typeScript
     type: interface
-    package: word
+    package: word!
     children:
-      - word.Word.Interfaces.TableBorderData.color
-      - word.Word.Interfaces.TableBorderData.type
-      - word.Word.Interfaces.TableBorderData.width
-  - uid: word.Word.Interfaces.TableBorderData.color
+      - 'word!Word.Interfaces.TableBorderData#color:member'
+      - 'word!Word.Interfaces.TableBorderData#type:member'
+      - 'word!Word.Interfaces.TableBorderData#width:member'
+  - uid: 'word!Word.Interfaces.TableBorderData#color:member'
     summary: |-
       获取或设置表格边框颜色。
 
-      \[[API 集: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: color
     fullName: color
     langs:
@@ -27,11 +27,11 @@ items:
       return:
         type:
           - string
-  - uid: word.Word.Interfaces.TableBorderData.type
+  - uid: 'word!Word.Interfaces.TableBorderData#type:member'
     summary: |-
       获取或设置表边框的类型。
 
-      \[[API 集: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
@@ -41,12 +41,12 @@ items:
       content: 'type?: Word.BorderType | "Mixed" | "None" | "Single" | "Double" | "Dotted" | "Dashed" | "DotDashed" | "Dot2Dashed" | "Triple" | "ThinThickSmall" | "ThickThinSmall" | "ThinThickThinSmall" | "ThinThickMed" | "ThickThinMed" | "ThinThickThinMed" | "ThinThickLarge" | "ThickThinLarge" | "ThinThickThinLarge" | "Wave" | "DoubleWave" | "DashedSmall" | "DashDotStroked" | "ThreeDEmboss" | "ThreeDEngrave";'
       return:
         type:
-          - Word.BorderType | "Mixed" | "None" | "Single" | "Double" | "Dotted" | "Dashed" | "DotDashed" | "Dot2Dashed" | "Triple" | "ThinThickSmall" | "ThickThinSmall" | "ThinThickThinSmall" | "ThinThickMed" | "ThickThinMed" | "ThinThickThinMed" | "ThinThickLarge" | "ThickThinLarge" | "ThinThickThinLarge" | "Wave" | "DoubleWave" | "DashedSmall" | "DashDotStroked" | "ThreeDEmboss" | "ThreeDEngrave"
-  - uid: word.Word.Interfaces.TableBorderData.width
+          - 'word!Word.Interfaces.TableBorderData#type~0:complex'
+  - uid: 'word!Word.Interfaces.TableBorderData#width:member'
     summary: |-
       获取或设置表边框的宽度（以磅为单位）。 不适用于宽度固定的表边框类型。
 
-      \[[API 集: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: width
     fullName: width
     langs:
@@ -57,3 +57,13 @@ items:
       return:
         type:
           - number
+references:
+  - uid: 'word!Word.Interfaces.TableBorderData#type~0:complex'
+    name: Word.BorderType | "Mixed" | "None" | "Single" | "Double" | "Dotted" | "Dashed" | "DotDashed" | "Dot2Dashed" | "Triple" | "ThinThickSmall" | "ThickThinSmall" | "ThinThickThinSmall" | "ThinThickMed" | "ThickThinMed" | "ThinThickThinMed" | "ThinThickLarge" | "ThickThinLarge" | "ThinThickThinLarge" | "Wave" | "DoubleWave" | "DashedSmall" | "DashDotStroked" | "ThreeDEmboss" | "ThreeDEngrave"
+    fullName: Word.BorderType | "Mixed" | "None" | "Single" | "Double" | "Dotted" | "Dashed" | "DotDashed" | "Dot2Dashed" | "Triple" | "ThinThickSmall" | "ThickThinSmall" | "ThinThickThinSmall" | "ThinThickMed" | "ThickThinMed" | "ThinThickThinMed" | "ThinThickLarge" | "ThickThinLarge" | "ThinThickThinLarge" | "Wave" | "DoubleWave" | "DashedSmall" | "DashDotStroked" | "ThreeDEmboss" | "ThreeDEngrave"
+    spec.typeScript:
+      - uid: 'word!Word.BorderType:enum'
+        name: Word.BorderType
+        fullName: Word.BorderType
+      - name: ' | "Mixed" | "None" | "Single" | "Double" | "Dotted" | "Dashed" | "DotDashed" | "Dot2Dashed" | "Triple" | "ThinThickSmall" | "ThickThinSmall" | "ThinThickThinSmall" | "ThinThickMed" | "ThickThinMed" | "ThinThickThinMed" | "ThinThickLarge" | "ThickThinLarge" | "ThinThickThinLarge" | "Wave" | "DoubleWave" | "DashedSmall" | "DashDotStroked" | "ThreeDEmboss" | "ThreeDEngrave"'
+        fullName: ' | "Mixed" | "None" | "Single" | "Double" | "Dotted" | "Dashed" | "DotDashed" | "Dot2Dashed" | "Triple" | "ThinThickSmall" | "ThickThinSmall" | "ThinThickThinSmall" | "ThinThickMed" | "ThickThinMed" | "ThinThickThinMed" | "ThinThickLarge" | "ThickThinLarge" | "ThinThickThinLarge" | "Wave" | "DoubleWave" | "DashedSmall" | "DashDotStroked" | "ThreeDEmboss" | "ThreeDEngrave"'
