--- a/docs/docs-ref-autogen/word_1_1/word/word.interfaces.contentcontroldata.yml
+++ b/docs/docs-ref-autogen/word_1_1/word/word.interfaces.contentcontroldata.yml
@@ -1,35 +1,35 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: word.Word.Interfaces.ContentControlData
-    summary: 描述通过调用 "contentControl ()" 返回的数据的接口。
+  - uid: 'word!Word.Interfaces.ContentControlData:interface'
+    summary: 描述通过调用 "contentControl （）" 返回的数据的接口。
     name: Word.Interfaces.ContentControlData
     fullName: Word.Interfaces.ContentControlData
     langs:
       - typeScript
     type: interface
-    package: word
+    package: word!
     children:
-      - word.Word.Interfaces.ContentControlData.appearance
-      - word.Word.Interfaces.ContentControlData.cannotDelete
-      - word.Word.Interfaces.ContentControlData.cannotEdit
-      - word.Word.Interfaces.ContentControlData.color
-      - word.Word.Interfaces.ContentControlData.contentControls
-      - word.Word.Interfaces.ContentControlData.font
-      - word.Word.Interfaces.ContentControlData.id
-      - word.Word.Interfaces.ContentControlData.inlinePictures
-      - word.Word.Interfaces.ContentControlData.paragraphs
-      - word.Word.Interfaces.ContentControlData.placeholderText
-      - word.Word.Interfaces.ContentControlData.removeWhenEdited
-      - word.Word.Interfaces.ContentControlData.style
-      - word.Word.Interfaces.ContentControlData.tag
-      - word.Word.Interfaces.ContentControlData.text
-      - word.Word.Interfaces.ContentControlData.title
-      - word.Word.Interfaces.ContentControlData.type
-  - uid: word.Word.Interfaces.ContentControlData.appearance
+      - 'word!Word.Interfaces.ContentControlData#appearance:member'
+      - 'word!Word.Interfaces.ContentControlData#cannotDelete:member'
+      - 'word!Word.Interfaces.ContentControlData#cannotEdit:member'
+      - 'word!Word.Interfaces.ContentControlData#color:member'
+      - 'word!Word.Interfaces.ContentControlData#contentControls:member'
+      - 'word!Word.Interfaces.ContentControlData#font:member'
+      - 'word!Word.Interfaces.ContentControlData#id:member'
+      - 'word!Word.Interfaces.ContentControlData#inlinePictures:member'
+      - 'word!Word.Interfaces.ContentControlData#paragraphs:member'
+      - 'word!Word.Interfaces.ContentControlData#placeholderText:member'
+      - 'word!Word.Interfaces.ContentControlData#removeWhenEdited:member'
+      - 'word!Word.Interfaces.ContentControlData#style:member'
+      - 'word!Word.Interfaces.ContentControlData#tag:member'
+      - 'word!Word.Interfaces.ContentControlData#text:member'
+      - 'word!Word.Interfaces.ContentControlData#title:member'
+      - 'word!Word.Interfaces.ContentControlData#type:member'
+  - uid: 'word!Word.Interfaces.ContentControlData#appearance:member'
     summary: |-
       获取或设置内容控件的外观。 该值可以是 "BoundingBox"、"Tags" 或 "Hidden"。
 
-      \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: appearance
     fullName: appearance
     langs:
@@ -39,12 +39,12 @@ items:
       content: 'appearance?: Word.ContentControlAppearance | "BoundingBox" | "Tags" | "Hidden";'
       return:
         type:
-          - Word.ContentControlAppearance | "BoundingBox" | "Tags" | "Hidden"
-  - uid: word.Word.Interfaces.ContentControlData.cannotDelete
+          - 'word!Word.Interfaces.ContentControlData#appearance~0:complex'
+  - uid: 'word!Word.Interfaces.ContentControlData#cannotDelete:member'
     summary: |-
       获取或设置指示用户是否可以删除内容控件的值。 与 removeWhenEdited 互相排斥。
 
-      \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: cannotDelete
     fullName: cannotDelete
     langs:
@@ -55,11 +55,11 @@ items:
       return:
         type:
           - boolean
-  - uid: word.Word.Interfaces.ContentControlData.cannotEdit
+  - uid: 'word!Word.Interfaces.ContentControlData#cannotEdit:member'
     summary: |-
       获取或设置指示用户是否可以编辑内容控件的内容的值。
 
-      \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: cannotEdit
     fullName: cannotEdit
     langs:
@@ -70,11 +70,11 @@ items:
       return:
         type:
           - boolean
-  - uid: word.Word.Interfaces.ContentControlData.color
+  - uid: 'word!Word.Interfaces.ContentControlData#color:member'
     summary: |-
       获取或设置内容控件的颜色。 颜色以 "\#RRGGBB" 格式或使用颜色名称指定。
 
-      \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: color
     fullName: color
     langs:
@@ -85,11 +85,11 @@ items:
       return:
         type:
           - string
-  - uid: word.Word.Interfaces.ContentControlData.contentControls
+  - uid: 'word!Word.Interfaces.ContentControlData#contentControls:member'
     summary: |-
       获取内容控件中的内容控件对象的集合。 只读。
 
-      \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: contentControls
     fullName: contentControls
     langs:
@@ -99,12 +99,12 @@ items:
       content: 'contentControls?: Word.Interfaces.ContentControlData[];'
       return:
         type:
-          - 'Word.Interfaces.ContentControlData[]'
-  - uid: word.Word.Interfaces.ContentControlData.font
+          - 'word!Word.Interfaces.ContentControlData#contentControls~0:complex'
+  - uid: 'word!Word.Interfaces.ContentControlData#font:member'
     summary: |-
       获取内容控件的文本格式。 使用此对象获取和设置字体名称、大小、颜色和其他属性。 只读。
 
-      \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
@@ -114,12 +114,12 @@ items:
       content: 'font?: Word.Interfaces.FontData;'
       return:
         type:
-          - word.Word.Interfaces.FontData
-  - uid: word.Word.Interfaces.ContentControlData.id
+          - 'word!Word.Interfaces.FontData:interface'
+  - uid: 'word!Word.Interfaces.ContentControlData#id:member'
     summary: |-
       获取表示内容控件标识符的整数。 只读。
 
-      \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -130,11 +130,11 @@ items:
       return:
         type:
           - number
-  - uid: word.Word.Interfaces.ContentControlData.inlinePictures
+  - uid: 'word!Word.Interfaces.ContentControlData#inlinePictures:member'
     summary: |-
       获取内容控件中的 inlinePicture 对象的集合。 集合不包括浮动图像。 只读。
 
-      \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: inlinePictures
     fullName: inlinePictures
     langs:
@@ -144,12 +144,12 @@ items:
       content: 'inlinePictures?: Word.Interfaces.InlinePictureData[];'
       return:
         type:
-          - 'Word.Interfaces.InlinePictureData[]'
-  - uid: word.Word.Interfaces.ContentControlData.paragraphs
+          - 'word!Word.Interfaces.ContentControlData#inlinePictures~0:complex'
+  - uid: 'word!Word.Interfaces.ContentControlData#paragraphs:member'
     summary: |-
       获取内容控件中的 paragraph 对象的集合。 只读。
 
-      \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: paragraphs
     fullName: paragraphs
     langs:
@@ -159,12 +159,12 @@ items:
       content: 'paragraphs?: Word.Interfaces.ParagraphData[];'
       return:
         type:
-          - 'Word.Interfaces.ParagraphData[]'
-  - uid: word.Word.Interfaces.ContentControlData.placeholderText
+          - 'word!Word.Interfaces.ContentControlData#paragraphs~0:complex'
+  - uid: 'word!Word.Interfaces.ContentControlData#placeholderText:member'
     summary: |-
       获取或设置内容控件的占位符文本。 内容控件为空时，将显示灰色的文本。
 
-      \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: placeholderText
     fullName: placeholderText
     langs:
@@ -175,11 +175,11 @@ items:
       return:
         type:
           - string
-  - uid: word.Word.Interfaces.ContentControlData.removeWhenEdited
+  - uid: 'word!Word.Interfaces.ContentControlData#removeWhenEdited:member'
     summary: |-
       获取或设置指示内容控件在编辑后是否可以删除的值。 与 cannotDelete 互相排斥。
 
-      \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: removeWhenEdited
     fullName: removeWhenEdited
     langs:
@@ -190,11 +190,11 @@ items:
       return:
         type:
           - boolean
-  - uid: word.Word.Interfaces.ContentControlData.style
+  - uid: 'word!Word.Interfaces.ContentControlData#style:member'
     summary: |-
       获取或设置内容控件的样式名称。 请对自定义样式和本地化样式名称使用此属性。 若要使用可以在区域设置之间移植的嵌入样式，请参阅“styleBuiltIn”属性。
 
-      \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: style
     fullName: style
     langs:
@@ -205,11 +205,11 @@ items:
       return:
         type:
           - string
-  - uid: word.Word.Interfaces.ContentControlData.tag
+  - uid: 'word!Word.Interfaces.ContentControlData#tag:member'
     summary: |-
       获取或设置用于标识内容控件的标记。
 
-      \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: tag
     fullName: tag
     langs:
@@ -220,11 +220,11 @@ items:
       return:
         type:
           - string
-  - uid: word.Word.Interfaces.ContentControlData.text
+  - uid: 'word!Word.Interfaces.ContentControlData#text:member'
     summary: |-
       获取内容控件的文本。 只读。
 
-      \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: text
     fullName: text
     langs:
@@ -235,11 +235,11 @@ items:
       return:
         type:
           - string
-  - uid: word.Word.Interfaces.ContentControlData.title
+  - uid: 'word!Word.Interfaces.ContentControlData#title:member'
     summary: |-
       获取或设置内容控件的标题。
 
-      \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: title
     fullName: title
     langs:
@@ -250,11 +250,11 @@ items:
       return:
         type:
           - string
-  - uid: word.Word.Interfaces.ContentControlData.type
+  - uid: 'word!Word.Interfaces.ContentControlData#type:member'
     summary: |-
       获取内容控件的类型。 当前仅支持富文本内容控件。 只读。
 
-      \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
@@ -264,4 +264,52 @@ items:
       content: 'type?: Word.ContentControlType | "Unknown" | "RichTextInline" | "RichTextParagraphs" | "RichTextTableCell" | "RichTextTableRow" | "RichTextTable" | "PlainTextInline" | "PlainTextParagraph" | "Picture" | "BuildingBlockGallery" | "CheckBox" | "ComboBox" | "DropDownList" | "DatePicker" | "RepeatingSection" | "RichText" | "PlainText";'
       return:
         type:
-          - Word.ContentControlType | "Unknown" | "RichTextInline" | "RichTextParagraphs" | "RichTextTableCell" | "RichTextTableRow" | "RichTextTable" | "PlainTextInline" | "PlainTextParagraph" | "Picture" | "BuildingBlockGallery" | "CheckBox" | "ComboBox" | "DropDownList" | "DatePicker" | "RepeatingSection" | "RichText" | "PlainText"
+          - 'word!Word.Interfaces.ContentControlData#type~0:complex'
+references:
+  - uid: 'word!Word.Interfaces.ContentControlData#appearance~0:complex'
+    name: Word.ContentControlAppearance | "BoundingBox" | "Tags" | "Hidden"
+    fullName: Word.ContentControlAppearance | "BoundingBox" | "Tags" | "Hidden"
+    spec.typeScript:
+      - uid: 'word!Word.ContentControlAppearance:enum'
+        name: Word.ContentControlAppearance
+        fullName: Word.ContentControlAppearance
+      - name: ' | "BoundingBox" | "Tags" | "Hidden"'
+        fullName: ' | "BoundingBox" | "Tags" | "Hidden"'
+  - uid: 'word!Word.Interfaces.ContentControlData#contentControls~0:complex'
+    name: 'Word.Interfaces.ContentControlData[]'
+    fullName: 'Word.Interfaces.ContentControlData[]'
+    spec.typeScript:
+      - uid: 'word!Word.Interfaces.ContentControlData:interface'
+        name: Word.Interfaces.ContentControlData
+        fullName: Word.Interfaces.ContentControlData
+      - name: '[]'
+        fullName: '[]'
+  - uid: 'word!Word.Interfaces.FontData:interface'
+    name: Word.Interfaces.FontData
+  - uid: 'word!Word.Interfaces.ContentControlData#inlinePictures~0:complex'
+    name: 'Word.Interfaces.InlinePictureData[]'
+    fullName: 'Word.Interfaces.InlinePictureData[]'
+    spec.typeScript:
+      - uid: 'word!Word.Interfaces.InlinePictureData:interface'
+        name: Word.Interfaces.InlinePictureData
+        fullName: Word.Interfaces.InlinePictureData
+      - name: '[]'
+        fullName: '[]'
+  - uid: 'word!Word.Interfaces.ContentControlData#paragraphs~0:complex'
+    name: 'Word.Interfaces.ParagraphData[]'
+    fullName: 'Word.Interfaces.ParagraphData[]'
+    spec.typeScript:
+      - uid: 'word!Word.Interfaces.ParagraphData:interface'
+        name: Word.Interfaces.ParagraphData
+        fullName: Word.Interfaces.ParagraphData
+      - name: '[]'
+        fullName: '[]'
+  - uid: 'word!Word.Interfaces.ContentControlData#type~0:complex'
+    name: Word.ContentControlType | "Unknown" | "RichTextInline" | "RichTextParagraphs" | "RichTextTableCell" | "RichTextTableRow" | "RichTextTable" | "PlainTextInline" | "PlainTextParagraph" | "Picture" | "BuildingBlockGallery" | "CheckBox" | "ComboBox" | "DropDownList" | "DatePicker" | "RepeatingSection" | "RichText" | "PlainText"
+    fullName: Word.ContentControlType | "Unknown" | "RichTextInline" | "RichTextParagraphs" | "RichTextTableCell" | "RichTextTableRow" | "RichTextTable" | "PlainTextInline" | "PlainTextParagraph" | "Picture" | "BuildingBlockGallery" | "CheckBox" | "ComboBox" | "DropDownList" | "DatePicker" | "RepeatingSection" | "RichText" | "PlainText"
+    spec.typeScript:
+      - uid: 'word!Word.ContentControlType:enum'
+        name: Word.ContentControlType
+        fullName: Word.ContentControlType
+      - name: ' | "Unknown" | "RichTextInline" | "RichTextParagraphs" | "RichTextTableCell" | "RichTextTableRow" | "RichTextTable" | "PlainTextInline" | "PlainTextParagraph" | "Picture" | "BuildingBlockGallery" | "CheckBox" | "ComboBox" | "DropDownList" | "DatePicker" | "RepeatingSection" | "RichText" | "PlainText"'
+        fullName: ' | "Unknown" | "RichTextInline" | "RichTextParagraphs" | "RichTextTableCell" | "RichTextTableRow" | "RichTextTable" | "PlainTextInline" | "PlainTextParagraph" | "Picture" | "BuildingBlockGallery" | "CheckBox" | "ComboBox" | "DropDownList" | "DatePicker" | "RepeatingSection" | "RichText" | "PlainText"'
