--- a/docs/docs-ref-autogen/word_1_1/word/word.interfaces.fontupdatedata.yml
+++ b/docs/docs-ref-autogen/word_1_1/word/word.interfaces.fontupdatedata.yml
@@ -1,30 +1,30 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: word.Word.Interfaces.FontUpdateData
-    summary: '用于更新 Font 对象上的数据的接口, 可用于 "font. set (<!-- -->{ ... }<!-- -->)".'
+  - uid: 'word!Word.Interfaces.FontUpdateData:interface'
+    summary: '用于更新 Font 对象上的数据的接口，可用于 "font. set （<!-- -->{ ... }<!-- -->)".'
     name: Word.Interfaces.FontUpdateData
     fullName: Word.Interfaces.FontUpdateData
     langs:
       - typeScript
     type: interface
-    package: word
+    package: word!
     children:
-      - word.Word.Interfaces.FontUpdateData.bold
-      - word.Word.Interfaces.FontUpdateData.color
-      - word.Word.Interfaces.FontUpdateData.doubleStrikeThrough
-      - word.Word.Interfaces.FontUpdateData.highlightColor
-      - word.Word.Interfaces.FontUpdateData.italic
-      - word.Word.Interfaces.FontUpdateData.name
-      - word.Word.Interfaces.FontUpdateData.size
-      - word.Word.Interfaces.FontUpdateData.strikeThrough
-      - word.Word.Interfaces.FontUpdateData.subscript
-      - word.Word.Interfaces.FontUpdateData.superscript
-      - word.Word.Interfaces.FontUpdateData.underline
-  - uid: word.Word.Interfaces.FontUpdateData.bold
+      - 'word!Word.Interfaces.FontUpdateData#bold:member'
+      - 'word!Word.Interfaces.FontUpdateData#color:member'
+      - 'word!Word.Interfaces.FontUpdateData#doubleStrikeThrough:member'
+      - 'word!Word.Interfaces.FontUpdateData#highlightColor:member'
+      - 'word!Word.Interfaces.FontUpdateData#italic:member'
+      - 'word!Word.Interfaces.FontUpdateData#name:member'
+      - 'word!Word.Interfaces.FontUpdateData#size:member'
+      - 'word!Word.Interfaces.FontUpdateData#strikeThrough:member'
+      - 'word!Word.Interfaces.FontUpdateData#subscript:member'
+      - 'word!Word.Interfaces.FontUpdateData#superscript:member'
+      - 'word!Word.Interfaces.FontUpdateData#underline:member'
+  - uid: 'word!Word.Interfaces.FontUpdateData#bold:member'
     summary: |-
       获取或设置表示字体是否为粗体的值。 如果字体格式为粗体则为 true，否则为 false。
 
-      \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: bold
     fullName: bold
     langs:
@@ -35,11 +35,11 @@ items:
       return:
         type:
           - boolean
-  - uid: word.Word.Interfaces.FontUpdateData.color
+  - uid: 'word!Word.Interfaces.FontUpdateData#color:member'
     summary: |-
       获取或设置指定字体的颜色。 您可以提供 "\#RRGGBB" 格式的值或颜色名称。
 
-      \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: color
     fullName: color
     langs:
@@ -50,11 +50,11 @@ items:
       return:
         type:
           - string
-  - uid: word.Word.Interfaces.FontUpdateData.doubleStrikeThrough
+  - uid: 'word!Word.Interfaces.FontUpdateData#doubleStrikeThrough:member'
     summary: |-
-      获取或设置一个值, 该值指示字体是否具有双删除线。 如果字体格式设置为加双删除线的文本则为 true，否则为 false。
+      获取或设置一个值，该值指示字体是否具有双删除线。 如果字体格式设置为加双删除线的文本则为 true，否则为 false。
 
-      \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: doubleStrikeThrough
     fullName: doubleStrikeThrough
     langs:
@@ -65,13 +65,13 @@ items:
       return:
         type:
           - boolean
-  - uid: word.Word.Interfaces.FontUpdateData.highlightColor
+  - uid: 'word!Word.Interfaces.FontUpdateData#highlightColor:member'
     summary: |-
-      获取或设置突出显示颜色。 若要对其进行设置, 请使用 "\#RRGGBB" 格式的值或颜色名称。 若要删除突出显示颜色, 请将其设置为 null。 返回的突出显示颜色可以是 "\#RRGGBB" 格式、用于混合突出显示颜色的空字符串或 null (无突出显示颜色)。
+      获取或设置突出显示颜色。 若要对其进行设置，请使用 "\#RRGGBB" 格式的值或颜色名称。 若要删除突出显示颜色，请将其设置为 null。 返回的突出显示颜色可以是 "\#RRGGBB" 格式、用于混合突出显示颜色的空字符串或 null （无突出显示颜色）。
 
-      **注意**: Windows 桌面上的 Office 中仅有默认的突出显示颜色。 这些是 "黄色"、"酸橙色"、"青绿色"、"浅绿"、"浅绿"、"Blue"、"Red"、"DarkBlue"、"青色"、"绿色"、"紫色"、"DarkRed"、"橄榄色"、"灰色"、"LightGray" 和 "黑色"。 当加载项在 Windows 桌面上的 Office 中运行时, 在应用于该字体时, 任何其他颜色都将转换为最接近的颜色。
+      **注意**： Windows 桌面上的 Office 中仅有默认的突出显示颜色。 这些是 "黄色"、"酸橙色"、"青绿色"、"浅绿"、"浅绿"、"Blue"、"Red"、"DarkBlue"、"青色"、"绿色"、"紫色"、"DarkRed"、"橄榄色"、"灰色"、"LightGray" 和 "黑色"。 当加载项在 Windows 桌面上的 Office 中运行时，在应用于该字体时，任何其他颜色都将转换为最接近的颜色。
 
-      \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: highlightColor
     fullName: highlightColor
     langs:
@@ -82,11 +82,11 @@ items:
       return:
         type:
           - string
-  - uid: word.Word.Interfaces.FontUpdateData.italic
+  - uid: 'word!Word.Interfaces.FontUpdateData#italic:member'
     summary: |-
       获取或设置表示字体是否为斜体的值。 如果字体为斜体则为 true，否则为 false。
 
-      \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: italic
     fullName: italic
     langs:
@@ -97,11 +97,11 @@ items:
       return:
         type:
           - boolean
-  - uid: word.Word.Interfaces.FontUpdateData.name
+  - uid: 'word!Word.Interfaces.FontUpdateData#name:member'
     summary: |-
       获取或设置表示字体名称的值。
 
-      \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -112,11 +112,11 @@ items:
       return:
         type:
           - string
-  - uid: word.Word.Interfaces.FontUpdateData.size
+  - uid: 'word!Word.Interfaces.FontUpdateData#size:member'
     summary: |-
       获取或设置表示字体大小（以磅值表示）的值。
 
-      \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: size
     fullName: size
     langs:
@@ -127,11 +127,11 @@ items:
       return:
         type:
           - number
-  - uid: word.Word.Interfaces.FontUpdateData.strikeThrough
+  - uid: 'word!Word.Interfaces.FontUpdateData#strikeThrough:member'
     summary: |-
-      获取或设置一个值, 该值指示字体是否具有删除线。 如果字体格式设置为加删除线的文本则为 true，否则为 false。
+      获取或设置一个值，该值指示字体是否具有删除线。 如果字体格式设置为加删除线的文本则为 true，否则为 false。
 
-      \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: strikeThrough
     fullName: strikeThrough
     langs:
@@ -142,11 +142,11 @@ items:
       return:
         type:
           - boolean
-  - uid: word.Word.Interfaces.FontUpdateData.subscript
+  - uid: 'word!Word.Interfaces.FontUpdateData#subscript:member'
     summary: |-
       获取或设置表示字体是否为下标的值。 如果字体格式为下标则为 true，否则为 false。
 
-      \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: subscript
     fullName: subscript
     langs:
@@ -157,11 +157,11 @@ items:
       return:
         type:
           - boolean
-  - uid: word.Word.Interfaces.FontUpdateData.superscript
+  - uid: 'word!Word.Interfaces.FontUpdateData#superscript:member'
     summary: |-
       获取或设置表示字体是否为上标的值。 如果字体格式为上标则为 true，否则为 false。
 
-      \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: superscript
     fullName: superscript
     langs:
@@ -172,11 +172,11 @@ items:
       return:
         type:
           - boolean
-  - uid: word.Word.Interfaces.FontUpdateData.underline
+  - uid: 'word!Word.Interfaces.FontUpdateData#underline:member'
     summary: |-
-      获取或设置表示字体的下划线类型的值。 如果字体不带下划线, 则为 "无"。
+      获取或设置表示字体的下划线类型的值。 如果字体不带下划线，则为 "无"。
 
-      \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: underline
     fullName: underline
     langs:
@@ -186,4 +186,14 @@ items:
       content: 'underline?: Word.UnderlineType | "Mixed" | "None" | "Hidden" | "DotLine" | "Single" | "Word" | "Double" | "Thick" | "Dotted" | "DottedHeavy" | "DashLine" | "DashLineHeavy" | "DashLineLong" | "DashLineLongHeavy" | "DotDashLine" | "DotDashLineHeavy" | "TwoDotDashLine" | "TwoDotDashLineHeavy" | "Wave" | "WaveHeavy" | "WaveDouble";'
       return:
         type:
-          - Word.UnderlineType | "Mixed" | "None" | "Hidden" | "DotLine" | "Single" | "Word" | "Double" | "Thick" | "Dotted" | "DottedHeavy" | "DashLine" | "DashLineHeavy" | "DashLineLong" | "DashLineLongHeavy" | "DotDashLine" | "DotDashLineHeavy" | "TwoDotDashLine" | "TwoDotDashLineHeavy" | "Wave" | "WaveHeavy" | "WaveDouble"
+          - 'word!Word.Interfaces.FontUpdateData#underline~0:complex'
+references:
+  - uid: 'word!Word.Interfaces.FontUpdateData#underline~0:complex'
+    name: Word.UnderlineType | "Mixed" | "None" | "Hidden" | "DotLine" | "Single" | "Word" | "Double" | "Thick" | "Dotted" | "DottedHeavy" | "DashLine" | "DashLineHeavy" | "DashLineLong" | "DashLineLongHeavy" | "DotDashLine" | "DotDashLineHeavy" | "TwoDotDashLine" | "TwoDotDashLineHeavy" | "Wave" | "WaveHeavy" | "WaveDouble"
+    fullName: Word.UnderlineType | "Mixed" | "None" | "Hidden" | "DotLine" | "Single" | "Word" | "Double" | "Thick" | "Dotted" | "DottedHeavy" | "DashLine" | "DashLineHeavy" | "DashLineLong" | "DashLineLongHeavy" | "DotDashLine" | "DotDashLineHeavy" | "TwoDotDashLine" | "TwoDotDashLineHeavy" | "Wave" | "WaveHeavy" | "WaveDouble"
+    spec.typeScript:
+      - uid: 'word!Word.UnderlineType:enum'
+        name: Word.UnderlineType
+        fullName: Word.UnderlineType
+      - name: ' | "Mixed" | "None" | "Hidden" | "DotLine" | "Single" | "Word" | "Double" | "Thick" | "Dotted" | "DottedHeavy" | "DashLine" | "DashLineHeavy" | "DashLineLong" | "DashLineLongHeavy" | "DotDashLine" | "DotDashLineHeavy" | "TwoDotDashLine" | "TwoDotDashLineHeavy" | "Wave" | "WaveHeavy" | "WaveDouble"'
+        fullName: ' | "Mixed" | "None" | "Hidden" | "DotLine" | "Single" | "Word" | "Double" | "Thick" | "Dotted" | "DottedHeavy" | "DashLine" | "DashLineHeavy" | "DashLineLong" | "DashLineLongHeavy" | "DotDashLine" | "DotDashLineHeavy" | "TwoDotDashLine" | "TwoDotDashLineHeavy" | "Wave" | "WaveHeavy" | "WaveDouble"'
